Add new loc keys with calendars, explanations, usage

--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -16,6 +16,100 @@
   "unit_billion": "Md",
   "unit_million": "M",
   "unit_thousand": "k",
+  "trello": "Trello",
+  "source": "Quelle",
+  "version": "Version",
+  "account_normal": "Normales Konto",
+  "account_pro": "Professionelles Konto",
+  "account_teacher": "Lehrerkonto",
+  "toggle_vh": "Vertikal/Horizontal umschalten",
+  "timeview_edition": "Zeitansichten",
+  "search_show": "Suchen",
+  "timeview1_show": "Hauptzeitansicht ein-/ausblenden",
+  "timeview2_show": "Alternative Zeitansicht ein-/ausblenden",
+  "timeview3_show": "Alternative Zeitansicht ein-/ausblenden",
+  "timeview1_set": "Hauptzeitansicht bearbeiten",
+  "timeview2_set": "Alternative Zeitansicht bearbeiten",
+  "timeview_save": "Zeitansicht speichern",
+  "catalogs_show": "Kataloge",
+  "database_show": "Datenbank anzeigen",
+  "load": "Lastpaneele und -kästen",
+  "cosmos_show": "Hintergrund umschalten",
+  "cat_science": "Wissenschaft",
+  "cat_power": "Leistung",
+  "cat_culture": "Kultur",
+  "cat_trade": "Handel",
+  "cat_being": "Sein",
+  "settings": "Einstellungen",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Hintergrund",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Layout umschalten",
+  "wikiback": "Zurück",
+  "wikiforward": "Nach vorne",
+  "wikinewtab": "Neuer Tab",
+  "debug_select": "Debug-Menü",
+  "debug_onoff": "debugMode",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Diagramm ein-/ausblenden",
+  "timepanel_show": "timePanel Tabelle",
+  "wikipage_show": "Wikipedia-Seite anzeigen",
+  "wikidates_show": "Wiki-Datumsangaben in einer Tabelle anzeigen",
+  "tableTO_show": "TimeObjects-Tabelle anzeigen (Debug)",
+  "tablePL_show": "PanelLines-Tabelle anzeigen (Debug)",
+  "on": "Ja",
+  "off": "NEIN",
+  "source_possible": "Quelleninhalte auswählen (vollständige Liste folgt)",
+  "source_select": "Quelle:",
+  "credits": "Credits",
+  "cred_cosmos": "Cosmos Master: Denys",
+  "cred_timeline": "Zeitgenie: Bogdan",
+  "cred_backend": "Wolkengott:",
+  "cred_wikipedia": "Wikipedia-Zauberer: Sabat",
+  "cred_project": "Achtsamkeit: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Bürgerschaft",
+  "source_encyclopedia.com": "Enzyklopädie",
+  "source_imdb": "IMDb",
+  "source_internetarchive": "Internetarchiv",
+  "source_projectgutemberg": "Projekt Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "UNESCO",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "Weltgeschichte",
+  "cal_name": "Kalender:",
+  "cal_availability_yes": "Verfügbar",
+  "cal_availability_no": "Noch nicht fertig (wir brauchen Hilfe... Beitrags-Website hier)",
+  "cal_other": "Kalender",
+  "cal_usage": "Verwendung:",
+  "cal_gregorian": "Gregorian",
+  "cal_islamic": "Islamisch (Hijri)",
+  "cal_chinese": "chinesisch",
+  "cal_persian": "Persisch (Solar Hijri)",
+  "cal_ethiopian": "äthiopisch",
+  "cal_hebrew": "hebräisch",
+  "cal_balinese": "Balinesen",
+  "cal_creationist": "Kreationist",
+  "cal_gregorian_explanation": "Sonnenkalender, 12 Monate, 365-366 Tage, eingeführt von Papst Gregor XIII. im Jahr 1582.",
+  "cal_islamic_explanation": "Der Mondkalender, 12 Monate, 354-355 Tage, beginnt mit der Auswanderung Mohammeds nach Medina (622 n. Chr.).",
+  "cal_chinese_explanation": "Der Lunisolarkalender kombiniert Mondmonate, Sonnenjahr und den 12-jährigen Tierkreiszyklus. Er wird für traditionelle ostasiatische Feste verwendet.",
+  "cal_persian_explanation": "Der Sonnenkalender, 365-366 Tage, beginnt mit der Frühlingstagundnachtgleiche (Nowruz).",
+  "cal_balinese_explanation": "Kalendersystem mit mehreren simultanen Zyklen, darunter ein 210-tägiger Pawukon-Kalender. Wird für religiöse Zeremonien verwendet.",
+  "cal_hebrew_explanation": "Lunisolarkalender, 12-13 Monate, beginnt mit der Schöpfung (3761 v. Chr.). Wird für religiöse Feierlichkeiten verwendet.",
+  "cal_ethiopian_explanation": "Sonnenkalender, 13 Monate (12 Monate mit 30 Tagen und 1 Monat mit 5-6 Tagen), 7-8 Jahre hinter dem Gregorianischen Kalender.",
+  "cal_creationist_explanation": "Chronologischer Rahmen, berechnet das Alter der Erde anhand biblischer Genealogien und datiert die Schöpfung auf vor 6.000 bis 10.000 Jahren.",
+  "cal_gregorian_usage": "Verwendung: 95% (offiziell) - Wird in fast allen Ländern als bürgerlicher Kalender für offizielle und wirtschaftliche Zwecke verwendet.",
+  "cal_islamic_usage": "Verwendung: 24 % (religiös) - Wird von ca. 2 Milliarden Muslimen (ca. 24 % der Weltbevölkerung) begangen, hauptsächlich an religiösen Feiertagen (Ramadan, Hajj usw.).",
+  "cal_chinese_usage": "Nutzung: 18 % (kulturell) - Wird von etwa 1,4 Milliarden Chinesen bei Festen wie dem chinesischen Neujahr begangen.",
+  "cal_persian_usage": "Nutzung: 1,5 % (zivil/kulturell) - Offizieller Kalender im Iran (~89 Mio.) und in Afghanistan (~41 Mio.).",
+  "cal_balinese_usage": "Verwendung: 1,5 % (zivil) - Offiziell in Äthiopien (~126 Mio.) und in Eritrea verwendet.",
+  "cal_hebrew_usage": "Verwendung: 0,2 % (religiös) - Wird von jüdischen Gemeinden (~16 Mio. Menschen) für religiöse Zwecke verwendet.",
+  "cal_ethiopian_usage": "Verwendung: <0,1 % (kulturell) - Hauptsächlich verwendet auf Bali (Indonesien), ca. 4,5 Mio. Einwohner.",
+  "cal_creationist_usage": "Verwendung: <0,01% (Nischennutzung) - Wird von einigen fundamentalistischen christlichen Gemeinschaften genutzt.",
   "tv_universe": "Universum",
   "tv_life": "Leben",
   "tv_dinosaurs": "Dinosaurier",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "Quelle",
-  "version": "Version",
-  "account_normal": "Normales Konto",
-  "account_pro": "Professionelles Konto",
-  "account_teacher": "Lehrerkonto",
-  "toggle_vh": "Vertikal/Horizontal umschalten",
-  "timeview_edition": "Zeitansichten bearbeiten",
-  "search_show": "Suchen",
-  "timeview1_show": "Hauptzeitansicht ein-/ausblenden",
-  "timeview2_show": "Alternative Zeitansicht ein-/ausblenden",
-  "timeview1_set": "Hauptzeitansicht bearbeiten",
-  "timeview2_set": "Alternative Zeitansicht bearbeiten",
-  "timeview_save": "Zeitansicht speichern",
-  "catalogs_show": "Kataloge",
-  "database_show": "Datenbank anzeigen",
-  "load": "Lastverteiler und -kästen",
-  "cosmos_show": "Hintergrund umschalten",
-  "cat_science": "Wissenschaft",
-  "cat_power": "Leistung",
-  "cat_culture": "Kultur",
-  "cat_trade": "Handel",
-  "cat_being": "Sein",
-  "settings": "Einstellungen",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Hintergrund",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Layout umschalten",
-  "wikiback": "Zurück",
-  "wikiforward": "Nach vorne",
-  "wikinewtab": "Neuer Tab",
-  "debug_select": "Debug-Menü",
-  "debug_onoff": "debugMode",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Diagramm ein-/ausblenden",
-  "timepanel_show": "timePanel Tabelle",
-  "wikipage_show": "Wikipedia-Seite anzeigen",
-  "wikidates_show": "Wiki-Datumsangaben in einer Tabelle anzeigen",
-  "tableTO_show": "TimeObjects-Tabelle anzeigen (Debug)",
-  "tablePL_show": "PanelLines-Tabelle anzeigen (Debug)",
-  "on": "Ja",
-  "off": "NEIN",
-  "source_possible": "Quelleninhalte auswählen (vollständige Liste folgt)",
-  "source_select": "Quelle:",
-  "credits": "Credits",
-  "cred_cosmos": "Cosmos Master: Denys",
-  "cred_timeline": "Zeitgenie: Bogdan",
-  "cred_backend": "Wolkengott: Ayoub",
-  "cred_wikipedia": "Wikipedia-Zauberer: Sabat",
-  "cred_project": "Achtsamkeit: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Bürgerschaft",
-  "source_encyclopedia.com": "Enzyklopädie",
-  "source_imdb": "IMDb",
-  "source_internetarchive": "Internetarchiv",
-  "source_projectgutemberg": "Projekt Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "UNESCO",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "Weltgeschichte",
-  "cal_gregorian": "Gregorian",
-  "cal_islamic": "Islamisch (Hijri)",
-  "cal_chinese": "Chinesisch (Lunisolar)",
-  "cal_persian": "Persisch (Solar Hijri)",
-  "cal_ethiopian": "äthiopisch",
-  "cal_hebrew": "hebräisch",
-  "cal_balinese": "Balinesisch (Pawukon & Saka)",
-  "cal_creationist": "Kreationist",
-  "cal_gregorian_explanation": "Weltweite Verwendung: 95 % (offizielle Verwendung) – Wird in nahezu allen Ländern als bürgerlicher Kalender für offizielle, wirtschaftliche und internationale Zwecke verwendet. Selbst Menschen, die anderen Kalendern folgen, nutzen im Alltag häufig den Gregorianischen Kalender.",
-  "cal_islamic_explanation": "Weltweite Nutzung: 24 % (religiöse Nutzung) – Befolgt von ca. 2 Milliarden Muslimen (ca. 24 % der Weltbevölkerung). Hauptsächlich für religiöse Feiertage (Ramadan, Hadsch usw.), aber in der Regel nicht für die zivile Verwaltung (außer in Saudi-Arabien).",
-  "cal_chinese_explanation": "Weltweite Nutzung: 18 % (kulturelle Nutzung) – Wird von ca. 1,4 Milliarden Chinesen und chinesischen Gemeinschaften im Ausland bei Festen wie dem chinesischen Neujahr befolgt. Wird nicht für die zivile Verwaltung verwendet.",
-  "cal_persian_explanation": "Weltweite Nutzung: 1,5 % (zivile und kulturelle Nutzung) - Offizieller Kalender im Iran (~89 Mio.) und in Afghanistan (~41 Mio.), insgesamt ~130 Mio.",
-  "cal_balinese_explanation": "Weltweiter Einsatz: 1,5 % (ziviler Einsatz) - Offiziell in Äthiopien (~126 Mio.) und auch in Eritrea im Einsatz.",
-  "cal_hebrew_explanation": "Weltweite Nutzung: 0,2 % (religiöse Nutzung) - Wird von jüdischen Gemeinden (~16 Mio. Menschen) für religiöse Zwecke genutzt.",
-  "cal_ethiopian_explanation": "Weltweite Nutzung: <0,1 % (kulturelle Nutzung) - Hauptsächlich verwendet auf Bali (Indonesien), ca. 4,5 Mio. Menschen.",
-  "cal_creationist_explanation": "Weltweite Nutzung: <0,01 % (Nischennutzung) - Selten; einige fundamentalistische christliche Gemeinschaften verwenden berechnete „Schöpfungsdaten“, jedoch nicht als funktionales Kalendersystem."
+  "tv_2020s_wikipedia": ""
 }
