--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -16,6 +16,100 @@
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
+  "trello": "Trello",
+  "source": "source",
+  "version": "version",
+  "account_normal": "Normal Account",
+  "account_pro": "Professional Account",
+  "account_teacher": "Teacher Account",
+  "toggle_vh": "Toggle vertical/horizontal",
+  "timeview_edition": "Timeviews",
+  "search_show": "Search",
+  "timeview1_show": "Show/Hide main Timeview",
+  "timeview2_show": "Show/Hide alternate Timeview",
+  "timeview3_show": "Show/Hide alternate Timeview",
+  "timeview1_set": "Edit main Timeview",
+  "timeview2_set": "Edit alternate Timeview",
+  "timeview_save": "Save timeview",
+  "catalogs_show": "Catalogs",
+  "database_show": "Show database",
+  "load": "Load Panels and Boxes",
+  "cosmos_show": "Toggle Background",
+  "cat_science": "Science",
+  "cat_power": "Power",
+  "cat_culture": "Culture",
+  "cat_trade": "Trade",
+  "cat_being": "Being",
+  "settings": "Settings",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Background",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Toggle layout",
+  "wikiback": "Back",
+  "wikiforward": "Forward",
+  "wikinewtab": "New tab",
+  "debug_select": "Debug Menu",
+  "debug_onoff": "debugMode",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Show/hide chart",
+  "timepanel_show": "timePanel Table",
+  "wikipage_show": "Show Wikipedia page",
+  "wikidates_show": "Show wiki Dates in a Table",
+  "tableTO_show": "Show TimeObjects table (debug)",
+  "tablePL_show": "Show PanelLines table (debug)",
+  "on": "yes",
+  "off": "no",
+  "source_possible": "Select source content (full list TBD)",
+  "source_select": "Source:",
+  "credits": "Credits",
+  "cred_cosmos": "Cosmos Master: Denys",
+  "cred_timeline": "Time Genius: Bogdan",
+  "cred_backend": "Cloud God: ",
+  "cred_wikipedia": "Wikipedia Wizard: Sabat",
+  "cred_project": "Mindfulness: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Citizendium",
+  "source_encyclopedia.com": "Encyclopedia",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "Internet Archive",
+  "source_projectgutemberg": "Project Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "Unesco",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "World History",
+  "cal_name": "Calendar:",
+  "cal_availability_yes": "Available",
+  "cal_availability_no": "Not ready yet (we need help... contribution-website-here)",
+  "cal_other": "Calendars",
+  "cal_usage": "Usage:",
+  "cal_gregorian": "Gregorian",
+  "cal_islamic": "Islamic (Hijri)",
+  "cal_chinese": "Chinese",
+  "cal_persian": "Persian (Solar Hijri)",
+  "cal_ethiopian": "Ethiopian",
+  "cal_hebrew": "Hebrew",
+  "cal_balinese": "Balinese",
+  "cal_creationist": "Creationist",
+  "cal_gregorian_explanation": "Solar calendar, 12 months, 365-366 days, introduced by Pope Gregory XIII in 1582.",
+  "cal_islamic_explanation": "Lunar calendar, 12 months, 354-355 days, begins with Muhammad's migration to Medina (622 CE).",
+  "cal_chinese_explanation": "Lunisolar calendar, combines lunar months, solar year, 12-year zodiac animal cycle. Used for traditional East Asian festivals.",
+  "cal_persian_explanation": "Solar calendar, 365-366 days, begins at the spring equinox (Nowruz).",
+  "cal_balinese_explanation": "Calendar system combining simultaneous cycles, including a 210-day Pawukon calendar. Used for religious ceremonies.",
+  "cal_hebrew_explanation": "Lunisolar calendar, 12-13 months, starts from creation (3761 BCE). Used for religious observances.",
+  "cal_ethiopian_explanation": "Solar calendar, 13 months (12 of 30 days and 1 of 5-6 days), 7-8 years behind the Gregorian calendar.",
+  "cal_creationist_explanation": "Chronological framework, calculates Earth's age from biblical genealogies, placing creation 6,000-10,000 years ago.",
+  "cal_gregorian_usage": "Usage: 95% (official) - Used as the civil calendar in nearly every country for official and economic purposes.",
+  "cal_islamic_usage": "Usage: 24% (religious) - Observed  by ~2 billion Muslims (~24% of the world), mainly for religious holidays (Ramadan, Hajj, etc.).",
+  "cal_chinese_usage": "Usage: 18% (cultural) - Observed by ~1.4 billion Chinese people for festivals like Lunar New Year.",
+  "cal_persian_usage": "Usage: 1.5% (civil/cultural) - Official calendar in Iran (~89M) and Afghanistan (~41M).",
+  "cal_balinese_usage": "Usage: 1.5% (civil) - Official in Ethiopia (~126M) and used in Eritrea.",
+  "cal_hebrew_usage": "Usage: 0.2% (religious) - Used by Jewish communities (~16M people) for religious purposes.",
+  "cal_ethiopian_usage": "Usage: <0.1% (cultural) - Primarily used in Bali (Indonesia), ~4.5M people.",
+  "cal_creationist_usage": "Usage: <0.01% (niche) - Used by a few fundamentalist Christian communities.",
   "tv_universe": "Universe",
   "tv_life": "Life",
   "tv_dinosaurs": "Dinosaurs",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "1990s",
   "tv_2000s_wikipedia": "2000s",
   "tv_2010s_wikipedia": "2010s",
-  "tv_2020s_wikipedia": "2020s",
-  "trello": "Trello",
-  "source": "source",
-  "version": "version",
-  "account_normal": "Normal Account",
-  "account_pro": "Professional Account",
-  "account_teacher": "Teacher Account",
-  "toggle_vh": "Toggle vertical/horizontal",
-  "timeview_edition": "Edit timeviews",
-  "search_show": "Search",
-  "timeview1_show": "Show/Hide main Timeview",
-  "timeview2_show": "Show/Hide alternate Timeview",
-  "timeview1_set": "Edit main Timeview",
-  "timeview2_set": "Edit alternate Timeview",
-  "timeview_save": "Save timeview",
-  "catalogs_show": "Catalogs",
-  "database_show": "Show database",
-  "load": "Load Panels and Boxes",
-  "cosmos_show": "Toggle Background",
-  "cat_science": "Science",
-  "cat_power": "Power",
-  "cat_culture": "Culture",
-  "cat_trade": "Trade",
-  "cat_being": "Being",
-  "settings": "Settings",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Background",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Toggle layout",
-  "wikiback": "Back",
-  "wikiforward": "Forward",
-  "wikinewtab": "New tab",
-  "debug_select": "Debug Menu",
-  "debug_onoff": "debugMode",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Show/hide chart",
-  "timepanel_show": "timePanel Table",
-  "wikipage_show": "Show Wikipedia page",
-  "wikidates_show": "Show wiki Dates in a Table",
-  "tableTO_show": "Show TimeObjects table (debug)",
-  "tablePL_show": "Show PanelLines table (debug)",
-  "on": "yes",
-  "off": "no",
-  "source_possible": "Select source content (full list TBD)",
-  "source_select": "Source:",
-  "credits": "Credits",
-  "cred_cosmos": "Cosmos Master: Denys",
-  "cred_timeline": "Time Genius: Bogdan",
-  "cred_backend": "Cloud God: Ayoub",
-  "cred_wikipedia": "Wikipedia Wizard: Sabat",
-  "cred_project": "Mindfulness: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Citizendium",
-  "source_encyclopedia.com": "Encyclopedia",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Internet Archive",
-  "source_projectgutemberg": "Project Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "Unesco",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "World History",
-  "cal_gregorian": "Gregorian",
-  "cal_islamic": "Islamic (Hijri)",
-  "cal_chinese": "Chinese (Lunisolar)",
-  "cal_persian": "Persian (Solar Hijri)",
-  "cal_ethiopian": "Ethiopian",
-  "cal_hebrew": "Hebrew",
-  "cal_balinese": "Balinese (Pawukon & Saka)",
-  "cal_creationist": "Creationist",
-  "cal_gregorian_explanation": "World usage: 95% (official use) - Used as the civil calendar in nearly every country for official, economic, and international purposes. Even people who follow other calendars often use Gregorian day-to-day.",
-  "cal_islamic_explanation": "World usage: 24% (religious use) - Followed by ~2 billion Muslims (approx. 24% of the world). Mainly for religious holidays (Ramadan, Hajj, etc.) but not typically for civil administration (except in Saudi Arabia).",
-  "cal_chinese_explanation": "World usage: 18% (cultural use) - Observed by ~1.4 billion Chinese people and overseas Chinese communities for festivals like Lunar New Year. Not used for civil administration.",
-  "cal_persian_explanation": "World usage: 1.5% (civil and cultural use) - Official calendar in Iran (~89M) and Afghanistan (~41M), totaling ~130M.",
-  "cal_balinese_explanation": "World usage: 1.5% (civil use) - Official in Ethiopia (~126M) and used in Eritrea.",
-  "cal_hebrew_explanation": "World usage: 0.2% (religious use) - Used by Jewish communities (~16M people) for religious purposes.",
-  "cal_ethiopian_explanation": "World usage: <0.1% (cultural use) - Primarily used in Bali (Indonesia), ~4.5M people.",
-  "cal_creationist_explanation": "World usage: <0.01% (niche use) - Rare; a few fundamentalist Christian communities use calculated “creation dates” but not as a functional calendar system."
+  "tv_2020s_wikipedia": "2020s"
 }
