--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -16,16 +16,110 @@
   "unit_billion": "MM",
   "unit_million": "M",
   "unit_thousand": "k",
+  "trello": "Trello",
+  "source": "fuente",
+  "version": "versión",
+  "account_normal": "Cuenta normal",
+  "account_pro": "Cuenta Profesional",
+  "account_teacher": "Cuenta de profesor",
+  "toggle_vh": "Alternar vertical/horizontal",
+  "timeview_edition": "Vistas de tiempo",
+  "search_show": "Buscar",
+  "timeview1_show": "Mostrar/Ocultar la vista de tiempo principal",
+  "timeview2_show": "Mostrar/Ocultar vista de tiempo alternativa",
+  "timeview3_show": "Mostrar/Ocultar vista de tiempo alternativa",
+  "timeview1_set": "Editar la vista de tiempo principal",
+  "timeview2_set": "Editar vista de tiempo alternativa",
+  "timeview_save": "Guardar vista de tiempo",
+  "catalogs_show": "Catálogos",
+  "database_show": "Mostrar base de datos",
+  "load": "Paneles y cajas de carga",
+  "cosmos_show": "Cambiar fondo",
+  "cat_science": "Ciencia",
+  "cat_power": "Fuerza",
+  "cat_culture": "Cultura",
+  "cat_trade": "Comercio",
+  "cat_being": "Ser",
+  "settings": "Ajustes",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Fondo",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Cambiar diseño",
+  "wikiback": "Atrás",
+  "wikiforward": "Adelante",
+  "wikinewtab": "Nueva pestaña",
+  "debug_select": "Menú de depuración",
+  "debug_onoff": "modo de depuración",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Mostrar/ocultar gráfico",
+  "timepanel_show": "Tabla timePanel",
+  "wikipage_show": "Mostrar página de Wikipedia",
+  "wikidates_show": "Mostrar fechas wiki en una tabla",
+  "tableTO_show": "Mostrar la tabla TimeObjects (depuración)",
+  "tablePL_show": "Mostrar la tabla PanelLines (depuración)",
+  "on": "Sí",
+  "off": "No",
+  "source_possible": "Seleccionar el contenido de origen (lista completa por determinar)",
+  "source_select": "Fuente:",
+  "credits": "Créditos",
+  "cred_cosmos": "Maestro del Cosmos: Denys",
+  "cred_timeline": "Genio del tiempo: Bogdan",
+  "cred_backend": "Dios de la nube:",
+  "cred_wikipedia": "Asistente de Wikipedia: Sabat",
+  "cred_project": "Atención plena: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Británica",
+  "source_citizendium": "Ciudadano",
+  "source_encyclopedia.com": "Enciclopedia",
+  "source_imdb": "IMDb",
+  "source_internetarchive": "Archivo de Internet",
+  "source_projectgutemberg": "Proyecto Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "Unesco",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "Historia mundial",
+  "cal_name": "Calendario:",
+  "cal_availability_yes": "Disponible",
+  "cal_availability_no": "Aún no estamos listos (necesitamos ayuda... contribución-sitio-web-aquí)",
+  "cal_other": "Calendarios",
+  "cal_usage": "Uso:",
+  "cal_gregorian": "gregoriano",
+  "cal_islamic": "Islámico (Hijri)",
+  "cal_chinese": "Chino",
+  "cal_persian": "Persa (Hégira Solar)",
+  "cal_ethiopian": "etíope",
+  "cal_hebrew": "hebreo",
+  "cal_balinese": "balinés",
+  "cal_creationist": "Creacionista",
+  "cal_gregorian_explanation": "Calendario solar, 12 meses, 365-366 días, introducido por el Papa Gregorio XIII en 1582.",
+  "cal_islamic_explanation": "El calendario lunar, de 12 meses y 354-355 días, comienza con la migración de Mahoma a Medina (622 d.C.).",
+  "cal_chinese_explanation": "Calendario lunisolar que combina los meses lunares, el año solar y el ciclo animal del zodíaco de 12 años. Se utiliza para festivales tradicionales del este asiático.",
+  "cal_persian_explanation": "El calendario solar, de 365-366 días, comienza en el equinoccio de primavera (Nowruz).",
+  "cal_balinese_explanation": "Sistema de calendario que combina ciclos simultáneos, incluyendo un calendario Pawukon de 210 días. Se utiliza para ceremonias religiosas.",
+  "cal_hebrew_explanation": "Calendario lunisolar, de 12 a 13 meses, que comienza desde la creación (3761 a. C.). Se utiliza para celebraciones religiosas.",
+  "cal_ethiopian_explanation": "Calendario solar, 13 meses (12 de 30 días y 1 de 5-6 días), 7-8 años detrás del calendario gregoriano.",
+  "cal_creationist_explanation": "Marco cronológico, calcula la edad de la Tierra a partir de genealogías bíblicas, ubicando la creación hace 6.000-10.000 años.",
+  "cal_gregorian_usage": "Uso: 95% (oficial) - Se utiliza como calendario civil en casi todos los países para fines oficiales y económicos.",
+  "cal_islamic_usage": "Uso: 24% (religioso) - Observado por ~2 mil millones de musulmanes (~24% del mundo), principalmente para festividades religiosas (Ramadán, Hajj, etc.).",
+  "cal_chinese_usage": "Uso: 18% (cultural) - Observado por aproximadamente 1.400 millones de chinos en festivales como el Año Nuevo Lunar.",
+  "cal_persian_usage": "Uso: 1,5% (civil/cultural) - Calendario oficial en Irán (~89M) y Afganistán (~41M).",
+  "cal_balinese_usage": "Uso: 1,5% (civil) - Oficial en Etiopía (~126M) y utilizado en Eritrea.",
+  "cal_hebrew_usage": "Uso: 0,2 % (religioso) - Utilizado por comunidades judías (~16 millones de personas) con fines religiosos.",
+  "cal_ethiopian_usage": "Uso: <0,1 % (cultural) - Se utiliza principalmente en Bali (Indonesia), unos 4,5 millones de personas.",
+  "cal_creationist_usage": "Uso: <0,01% (nicho) - Utilizado por algunas comunidades cristianas fundamentalistas.",
   "tv_universe": "Universo",
   "tv_life": "Vida",
   "tv_dinosaurs": "Dinosaurios",
-  "tv_apes": "Monos",
+  "tv_apes": "simios",
   "tv_homo": "Homo",
   "tv_humans": "Humanos",
   "tv_language": "Idioma",
   "tv_history": "Historia",
-  "tv_milenium": "Último milenio",
-  "tv_century": "Siglo pasado",
+  "tv_milenium": "El último milenio",
+  "tv_century": "El siglo pasado",
   "tv_universe_wikipedia": "",
   "tv_life_wikipedia": "",
   "tv_dinosaurs_wikipedia": "",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "fuente",
-  "version": "versión",
-  "account_normal": "Cuenta normal",
-  "account_pro": "Cuenta profesional",
-  "account_teacher": "Cuenta de profesor",
-  "toggle_vh": "Alternar vertical/horizontal",
-  "timeview_edition": "Editar vistas de tiempo",
-  "search_show": "Buscar",
-  "timeview1_show": "Mostrar/Ocultar vista de tiempo principal",
-  "timeview2_show": "Mostrar/Ocultar vista de tiempo alternativa",
-  "timeview1_set": "Editar vista de tiempo principal",
-  "timeview2_set": "Editar vista de tiempo alternativa",
-  "timeview_save": "Guardar vista de tiempo",
-  "catalogs_show": "Catálogos",
-  "database_show": "Mostrar base de datos",
-  "load": "Paneles y cajas de carga",
-  "cosmos_show": "Alternar fondo",
-  "cat_science": "Ciencia",
-  "cat_power": "Fuerza",
-  "cat_culture": "Cultura",
-  "cat_trade": "Comercio",
-  "cat_being": "Ser",
-  "settings": "Ajustes",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Fondo",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Alternar diseño",
-  "wikiback": "Atrás",
-  "wikiforward": "Adelante",
-  "wikinewtab": "Nueva pestaña",
-  "debug_select": "Menú de depuración",
-  "debug_onoff": "Modo de depuración",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Mostrar/ocultar gráfico",
-  "timepanel_show": "Tabla de panel de tiempo",
-  "wikipage_show": "Mostrar página de Wikipedia",
-  "wikidates_show": "Mostrar fechas de la wiki en una tabla",
-  "tableTO_show": "Mostrar tabla TimeObjects (depuración)",
-  "tablePL_show": "Mostrar tabla PanelLines (depuración)",
-  "on": "Sí",
-  "off": "No",
-  "source_possible": "Seleccionar contenido fuente (lista completa por determinar)",
-  "source_select": "Fuente:",
-  "credits": "Créditos",
-  "cred_cosmos": "Maestro del Cosmos: Denys",
-  "cred_timeline": "Genio del tiempo: Bogdan",
-  "cred_backend": "Dios de las nubes: Ayoub",
-  "cred_wikipedia": "Asistente de Wikipedia: Sábado",
-  "cred_project": "Atención plena: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Británica",
-  "source_citizendium": "Ciudadano",
-  "source_encyclopedia.com": "Enciclopedia",
-  "source_imdb": "IMDb",
-  "source_internetarchive": "Archivo de Internet",
-  "source_projectgutemberg": "Proyecto Gutenberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "Unesco",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "Historia universal",
-  "cal_gregorian": "gregoriano",
-  "cal_islamic": "Islámico (Hégira)",
-  "cal_chinese": "Chino (Lunisolar)",
-  "cal_persian": "Persa (Hégira Solar)",
-  "cal_ethiopian": "etíope",
-  "cal_hebrew": "hebreo",
-  "cal_balinese": "Balinés (Pawukon y Saka)",
-  "cal_creationist": "creacionista",
-  "cal_gregorian_explanation": "Uso mundial: 95% (uso oficial) - Se utiliza como calendario civil en casi todos los países para fines oficiales, económicos e internacionales. Incluso quienes siguen otros calendarios suelen usar el gregoriano en su vida diaria.",
-  "cal_islamic_explanation": "Uso mundial: 24% (uso religioso) - Seguido por unos 2000 millones de musulmanes (aproximadamente el 24% de la población mundial). Principalmente para festividades religiosas (Ramadán, Hajj, etc.), pero no suele utilizarse para la administración pública (excepto en Arabia Saudí).",
-  "cal_chinese_explanation": "Uso mundial: 18% (uso cultural) - Observado por aproximadamente 1.400 millones de chinos y comunidades chinas en el extranjero para festivales como el Año Nuevo Lunar. No se utiliza para la administración civil.",
-  "cal_persian_explanation": "Uso mundial: 1,5% (uso civil y cultural) - Calendario oficial en Irán (~89 millones) y Afganistán (~41 millones), sumando un total de ~130 millones.",
-  "cal_balinese_explanation": "Uso mundial: 1,5% (uso civil) - Oficial en Etiopía (~126 millones) y utilizado en Eritrea.",
-  "cal_hebrew_explanation": "Uso mundial: 0,2% (uso religioso) - Utilizado por comunidades judías (~16 millones de personas) con fines religiosos.",
-  "cal_ethiopian_explanation": "Uso mundial: <0,1% (uso cultural) - Se usa principalmente en Bali (Indonesia), ~4,5 millones de personas.",
-  "cal_creationist_explanation": "Uso mundial: <0,01% (uso de nicho) - Poco frecuente; algunas comunidades cristianas fundamentalistas utilizan “fechas de creación” calculadas, pero no como un sistema de calendario funcional."
+  "tv_2020s_wikipedia": ""
 }
