--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -16,6 +16,100 @@
   "unit_billion": "Md",
   "unit_million": "M",
   "unit_thousand": "k",
+  "trello": "Trello",
+  "source": "source",
+  "version": "version",
+  "account_normal": "Compte normal",
+  "account_pro": "Compte Pro",
+  "account_teacher": "Compte enseignant",
+  "toggle_vh": "Basculer vertical/horizontal",
+  "timeview_edition": "Timeviews",
+  "search_show": "Chercher",
+  "timeview1_show": "Afficher/Masquer timeview 1",
+  "timeview2_show": "Afficher/Masquer timeview 2",
+  "timeview3_show": "Afficher/Masquer timeview 3",
+  "timeview1_set": "Modifier timeview 1",
+  "timeview2_set": "Modifier timeview 2",
+  "timeview_save": "Enregistrer timeview ",
+  "catalogs_show": "Catalogues",
+  "database_show": "Afficher la base de données",
+  "load": "Panneaux et boîtes de chargement",
+  "cosmos_show": "Basculer l'arrière-plan",
+  "cat_science": "Science",
+  "cat_power": "Pouvoir",
+  "cat_culture": "Culture",
+  "cat_trade": "Commerce",
+  "cat_being": "Être",
+  "settings": "Paramètres",
+  "wikipedia": "Wikipédia",
+  "toggle_wsbackgd": "Arrière-plan",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Changer la mise en page",
+  "wikiback": "Avant",
+  "wikiforward": "Après",
+  "wikinewtab": "Nouvel onglet",
+  "debug_select": "Debug Menu",
+  "debug_onoff": "debugMode",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Afficher/masquer le graphique",
+  "timepanel_show": "Tableau timePanel",
+  "wikipage_show": "Afficher la page Wikipédia",
+  "wikidates_show": "Afficher les dates du wiki dans un tableau",
+  "tableTO_show": "Afficher le tableau TimeObjects (débogage)",
+  "tablePL_show": "Afficher le tableau PanelLines (débogage)",
+  "on": "oui",
+  "off": "non",
+  "source_possible": "Sélectionnez la source (liste complète à déterminer)",
+  "source_select": "Source :",
+  "credits": "Remerciements",
+  "cred_cosmos": "Maître du Cosmos : Denys",
+  "cred_timeline": "Génie du temps : Bogdan",
+  "cred_backend": "Dieu des nuages ​​: ",
+  "cred_wikipedia": "Sorcier de Wikipédia : Sabat",
+  "cred_project": "Pleine conscience : Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Citizendium",
+  "source_encyclopedia.com": "Encyclopedia",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "Internet Archive",
+  "source_projectgutemberg": "Project Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "Unesco",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "World History",
+  "cal_name": "Calendrier:",
+  "cal_availability_yes": "Disponible",
+  "cal_availability_no": "Pas encore prêt (nous avons besoin d'aide... site web de contribution ici)",
+  "cal_other": "Calendriers",
+  "cal_usage": "Usage:",
+  "cal_gregorian": "grégorien",
+  "cal_islamic": "Islamique (Hégire)",
+  "cal_chinese": "Chinois",
+  "cal_persian": "Persan (Hégire solaire)",
+  "cal_ethiopian": "éthiopien",
+  "cal_hebrew": "hébreu",
+  "cal_balinese": "Balinais",
+  "cal_creationist": "Créationniste",
+  "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
+  "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
+  "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
+  "cal_persian_explanation": "Le calendrier solaire, de 365 à 366 jours, commence à l'équinoxe de printemps (Nowruz).",
+  "cal_balinese_explanation": "Système calendaire combinant des cycles simultanés, incluant un calendrier Pawukon de 210 jours. Utilisé pour les cérémonies religieuses.",
+  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les pratiques religieuses.",
+  "cal_ethiopian_explanation": "Calendrier solaire, 13 mois (12 de 30 jours et 1 de 5-6 jours), 7-8 ans en retard sur le calendrier grégorien.",
+  "cal_creationist_explanation": "Ce cadre chronologique calcule l'âge de la Terre à partir des généalogies bibliques, situant la création il y a 6 000 à 10 000 ans.",
+  "cal_gregorian_usage": "Utilisation : 95 % (officiel) - Utilisé comme calendrier civil dans presque tous les pays à des fins officielles et économiques.",
+  "cal_islamic_usage": "Usage : 24 % (religieux) - Observé par environ 2 milliards de musulmans (environ 24 % de la population mondiale), principalement pour les fêtes religieuses (Ramadan, Hajj, etc.).",
+  "cal_chinese_usage": "Usage : 18 % (culturel) - Observé par environ 1,4 milliard de Chinois lors de fêtes comme le Nouvel An lunaire.",
+  "cal_persian_usage": "Utilisation : 1,5 % (civil/culturel) - Calendrier officiel en Iran (~89 millions) et en Afghanistan (~41 millions).",
+  "cal_balinese_usage": "Utilisation : 1,5 % (civil) - Officiel en Éthiopie (~126 millions) et utilisé en Érythrée.",
+  "cal_hebrew_usage": "Utilisation : 0,2 % (religieux) - Utilisé par les communautés juives (~16 millions de personnes) à des fins religieuses.",
+  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), par environ 4,5 millions de personnes.",
+  "cal_creationist_usage": "Utilisation : <0,01 % (niche) - Utilisé par quelques communautés chrétiennes fondamentalistes.",
   "tv_universe": "Univers",
   "tv_life": "Vie",
   "tv_dinosaurs": "Dinosaures",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "Années_1990",
   "tv_2000s_wikipedia": "Années_2000",
   "tv_2010s_wikipedia": "Années_2010",
-  "tv_2020s_wikipedia": "Années_2020",
-  "trello": "Trello",
-  "source": "source",
-  "version": "version",
-  "account_normal": "Compte normal",
-  "account_pro": "Compte Pro",
-  "account_teacher": "Compte enseignant",
-  "toggle_vh": "Basculer vertical/horizontal",
-  "timeview_edition": "Modifier les vues temporelles",
-  "search_show": "Chercher",
-  "timeview1_show": "Afficher/Masquer timeview 1",
-  "timeview2_show": "Afficher/Masquer timeview 2",
-  "timeview1_set": "Modifier timeview 1",
-  "timeview2_set": "Modifier timeview 2",
-  "timeview_save": "Enregistrer timeview ",
-  "catalogs_show": "Catalogues",
-  "database_show": "Afficher la base de données",
-  "load": "Panneaux et boîtes de chargement",
-  "cosmos_show": "Basculer l'arrière-plan",
-  "cat_science": "Science",
-  "cat_power": "Pouvoir",
-  "cat_culture": "Culture",
-  "cat_trade": "Commerce",
-  "cat_being": "Être",
-  "settings": "Paramètres",
-  "wikipedia": "Wikipédia",
-  "toggle_wsbackgd": "Arrière-plan",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Changer la mise en page",
-  "wikiback": "Avant",
-  "wikiforward": "Après",
-  "wikinewtab": "Nouvel onglet",
-  "debug_select": "Debug Menu",
-  "debug_onoff": "debugMode",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Afficher/masquer le graphique",
-  "timepanel_show": "Tableau timePanel",
-  "wikipage_show": "Afficher la page Wikipédia",
-  "wikidates_show": "Afficher les dates du wiki dans un tableau",
-  "tableTO_show": "Afficher le tableau TimeObjects (débogage)",
-  "tablePL_show": "Afficher le tableau PanelLines (débogage)",
-  "on": "oui",
-  "off": "non",
-  "source_possible": "Sélectionnez la source (liste complète à déterminer)",
-  "source_select": "Source :",
-  "credits": "Remerciements",
-  "cred_cosmos": "Maître du Cosmos : Denys",
-  "cred_timeline": "Génie du temps : Bogdan",
-  "cred_backend": "Dieu des nuages ​​: Ayoub",
-  "cred_wikipedia": "Sorcier de Wikipédia : Sabat",
-  "cred_project": "Pleine conscience : Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Citizendium",
-  "source_encyclopedia.com": "Encyclopedia",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Internet Archive",
-  "source_projectgutemberg": "Project Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "Unesco",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "World History",
-  "cal_gregorian": "grégorien",
-  "cal_islamic": "Islamique (Hégire)",
-  "cal_chinese": "Chinois (luno-solaire)",
-  "cal_persian": "Persan (Hégire solaire)",
-  "cal_ethiopian": "éthiopien",
-  "cal_hebrew": "hébreu",
-  "cal_balinese": "Balinais (Pawukon et Saka)",
-  "cal_creationist": "créationniste",
-  "cal_gregorian_explanation": "Utilisation mondiale : 95 % (usage officiel) – Utilisé comme calendrier civil dans la quasi-totalité des pays à des fins officielles, économiques et internationales. Même ceux qui suivent d’autres calendriers utilisent souvent le calendrier grégorien au quotidien.",
-  "cal_islamic_explanation": "Utilisation mondiale : 24 % (usage religieux) – Suivie par environ 2 milliards de musulmans (soit environ 24 % de la population mondiale). Principalement pour les fêtes religieuses (Ramadan, Hajj, etc.), mais généralement pas pour l’administration civile (sauf en Arabie saoudite).",
-  "cal_chinese_explanation": "Usage mondial : 18 % (usage culturel) – Observé par environ 1,4 milliard de Chinois et de communautés chinoises d’outre-mer lors de fêtes comme le Nouvel An lunaire. Non utilisé pour l’administration civile.",
-  "cal_persian_explanation": "Utilisation mondiale : 1,5 % (usage civil et culturel) - Calendrier officiel en Iran (~89 millions) et en Afghanistan (~41 millions), soit un total d'environ 130 millions.",
-  "cal_balinese_explanation": "Utilisation mondiale : 1,5 % (usage civil) - Officiel en Éthiopie (~126 millions) et utilisé en Érythrée.",
-  "cal_hebrew_explanation": "Utilisation mondiale : 0,2 % (usage religieux) - Utilisé par les communautés juives (~16 millions de personnes) à des fins religieuses.",
-  "cal_ethiopian_explanation": "Utilisation mondiale : <0,1 % (usage culturel) - Principalement utilisé à Bali (Indonésie), ~4,5 millions de personnes.",
-  "cal_creationist_explanation": "Utilisation mondiale : <0,01 % (utilisation de niche) - Rare ; quelques communautés chrétiennes fondamentalistes utilisent des « dates de création » calculées, mais pas comme un système de calendrier fonctionnel."
+  "tv_2020s_wikipedia": "Années_2020"
 }
