--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -15,7 +15,101 @@
   "lg_hi": "हिंदी",
   "unit_billion": "बी",
   "unit_million": "एम",
-  "unit_thousand": "कश्मीर",
+  "unit_thousand": "के",
+  "trello": "Trello",
+  "source": "स्रोत",
+  "version": "संस्करण",
+  "account_normal": "सामान्य खाता",
+  "account_pro": "पेशेवर खाता",
+  "account_teacher": "शिक्षक खाता",
+  "toggle_vh": "ऊर्ध्वाधर/क्षैतिज टॉगल करें",
+  "timeview_edition": "समय दृश्य",
+  "search_show": "खोज",
+  "timeview1_show": "मुख्य टाइमव्यू दिखाएँ/छिपाएँ",
+  "timeview2_show": "वैकल्पिक समय दृश्य दिखाएँ/छिपाएँ",
+  "timeview3_show": "वैकल्पिक समय दृश्य दिखाएँ/छिपाएँ",
+  "timeview1_set": "मुख्य टाइमव्यू संपादित करें",
+  "timeview2_set": "वैकल्पिक टाइमव्यू संपादित करें",
+  "timeview_save": "टाइमव्यू सहेजें",
+  "catalogs_show": "कैटलाग",
+  "database_show": "डेटाबेस दिखाएँ",
+  "load": "लोड पैनल और बॉक्स",
+  "cosmos_show": "पृष्ठभूमि को टॉगल करें",
+  "cat_science": "विज्ञान",
+  "cat_power": "शक्ति",
+  "cat_culture": "संस्कृति",
+  "cat_trade": "व्यापार",
+  "cat_being": "प्राणी",
+  "settings": "सेटिंग्स",
+  "wikipedia": "विकिपीडिया",
+  "toggle_wsbackgd": "पृष्ठभूमि",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "लेआउट टॉगल करें",
+  "wikiback": "पीछे",
+  "wikiforward": "आगे",
+  "wikinewtab": "नया टैब",
+  "debug_select": "डीबग मेनू",
+  "debug_onoff": "डिबग मोड",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "चार्ट दिखाएँ/छिपाएँ",
+  "timepanel_show": "टाइमपैनल टेबल",
+  "wikipage_show": "विकिपीडिया पृष्ठ दिखाएँ",
+  "wikidates_show": "विकी तिथियों को एक तालिका में दिखाएँ",
+  "tableTO_show": "टाइमऑब्जेक्ट्स टेबल दिखाएँ (डीबग)",
+  "tablePL_show": "पैनललाइन्स टेबल दिखाएँ (डीबग)",
+  "on": "हाँ",
+  "off": "नहीं",
+  "source_possible": "स्रोत सामग्री का चयन करें (पूरी सूची अभी तय की जानी है)",
+  "source_select": "स्रोत:",
+  "credits": "क्रेडिट",
+  "cred_cosmos": "कॉस्मोस मास्टर: डेनिस",
+  "cred_timeline": "समय का धुरंधर: बोगदान",
+  "cred_backend": "बादल देवता:",
+  "cred_wikipedia": "विकिपीडिया विज़ार्ड: सबैट",
+  "cred_project": "ध्यान: पियरे",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "ब्रिटानिका",
+  "source_citizendium": "सिटिज़नडियम",
+  "source_encyclopedia.com": "विश्वकोश",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "इंटरनेट आर्काइव",
+  "source_projectgutemberg": "प्रोजेक्ट गुटेनबर्ग",
+  "source_qiuwenbaike": "किउवेन बाइके",
+  "source_scholarpedia": "स्कॉलरपीडिया",
+  "source_unesco": "यूनेस्को",
+  "source_wikipedia": "विकिपीडिया",
+  "source_grokipedia": "ग्रोकिपीडिया",
+  "source_worldhistory": "दुनिया के इतिहास",
+  "cal_name": "कैलेंडर:",
+  "cal_availability_yes": "उपलब्ध",
+  "cal_availability_no": "अभी तैयार नहीं है (हमें मदद की ज़रूरत है... योगदान वेबसाइट यहाँ देखें)",
+  "cal_other": "CALENDARS",
+  "cal_usage": "उपयोग:",
+  "cal_gregorian": "ग्रेगोरियन",
+  "cal_islamic": "इस्लामी (हिजरी)",
+  "cal_chinese": "चीनी",
+  "cal_persian": "फ़ारसी (सूर्य हिजरी)",
+  "cal_ethiopian": "इथियोपियाई",
+  "cal_hebrew": "यहूदी",
+  "cal_balinese": "बाली",
+  "cal_creationist": "निर्माणवादी",
+  "cal_gregorian_explanation": "सौर कैलेंडर, जिसमें 12 महीने और 365-366 दिन होते हैं, को पोप ग्रेगरी XIII ने 1582 में शुरू किया था।",
+  "cal_islamic_explanation": "चंद्र कैलेंडर, जिसमें 12 महीने और 354-355 दिन होते हैं, की शुरुआत मुहम्मद के मदीना प्रवास (622 ईस्वी) से होती है।",
+  "cal_chinese_explanation": "चंद्र-सौर कैलेंडर, चंद्र महीनों, सौर वर्ष और 12 वर्षीय राशि चक्र पशु चक्र का संयोजन है। इसका उपयोग पारंपरिक पूर्वी एशियाई त्योहारों में किया जाता है।",
+  "cal_persian_explanation": "सौर कैलेंडर, जिसमें 365-366 दिन होते हैं, वसंत विषुव (नवरोज) से शुरू होता है।",
+  "cal_balinese_explanation": "एक साथ कई चक्रों को संयोजित करने वाली कैलेंडर प्रणाली, जिसमें 210 दिनों का पावुकॉन कैलेंडर भी शामिल है। इसका उपयोग धार्मिक अनुष्ठानों के लिए किया जाता है।",
+  "cal_hebrew_explanation": "चंद्र-सौर कैलेंडर, 12-13 महीने, सृष्टि की उत्पत्ति (3761 ईसा पूर्व) से शुरू होता है। इसका उपयोग धार्मिक अनुष्ठानों के लिए किया जाता है।",
+  "cal_ethiopian_explanation": "सौर कैलेंडर, 13 महीने (12 महीने 30 दिनों के और 1 महीना 5-6 दिनों का), ग्रेगोरियन कैलेंडर से 7-8 साल पीछे।",
+  "cal_creationist_explanation": "कालानुक्रमिक ढांचा, बाइबिल की वंशावलियों से पृथ्वी की आयु की गणना करता है, जिसके अनुसार सृष्टि की रचना 6,000-10,000 वर्ष पूर्व हुई थी।",
+  "cal_gregorian_usage": "उपयोग: 95% (आधिकारिक) - लगभग हर देश में आधिकारिक और आर्थिक उद्देश्यों के लिए नागरिक कैलेंडर के रूप में उपयोग किया जाता है।",
+  "cal_islamic_usage": "उपयोग: 24% (धार्मिक) - लगभग 2 अरब मुसलमानों (दुनिया के लगभग 24%) द्वारा मनाया जाता है, मुख्य रूप से धार्मिक त्योहारों (रमजान, हज आदि) के लिए।",
+  "cal_chinese_usage": "उपयोग: 18% (सांस्कृतिक) - चंद्र नव वर्ष जैसे त्योहारों के लिए लगभग 1.4 अरब चीनी लोगों द्वारा मनाया जाता है।",
+  "cal_persian_usage": "उपयोग: 1.5% (नागरिक/सांस्कृतिक) - ईरान (~89 मिलियन) और अफगानिस्तान (~41 मिलियन) में आधिकारिक कैलेंडर।",
+  "cal_balinese_usage": "उपयोग: 1.5% (नागरिक) - इथियोपिया में आधिकारिक (~126 मिलियन) और इरिट्रिया में उपयोग किया जाता है।",
+  "cal_hebrew_usage": "उपयोग: 0.2% (धार्मिक) - यहूदी समुदायों (~16 मिलियन लोग) द्वारा धार्मिक उद्देश्यों के लिए उपयोग किया जाता है।",
+  "cal_ethiopian_usage": "उपयोग: <0.1% (सांस्कृतिक) - मुख्य रूप से बाली (इंडोनेशिया) में उपयोग किया जाता है, लगभग 4.5 मिलियन लोग।",
+  "cal_creationist_usage": "उपयोग: <0.01% (विशिष्ट) - कुछ कट्टरपंथी ईसाई समुदायों द्वारा उपयोग किया जाता है।",
   "tv_universe": "ब्रह्मांड",
   "tv_life": "ज़िंदगी",
   "tv_dinosaurs": "डायनासोर",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "स्रोत",
-  "version": "संस्करण",
-  "account_normal": "सामान्य खाता",
-  "account_pro": "पेशेवर खाता",
-  "account_teacher": "शिक्षक खाता",
-  "toggle_vh": "लंबवत/क्षैतिज टॉगल करें",
-  "timeview_edition": "समयदृश्य संपादित करें",
-  "search_show": "खोज",
-  "timeview1_show": "मुख्य समयदृश्य दिखाएँ/छिपाएँ",
-  "timeview2_show": "वैकल्पिक समयदृश्य दिखाएँ/छिपाएँ",
-  "timeview1_set": "मुख्य समयदृश्य संपादित करें",
-  "timeview2_set": "वैकल्पिक समयदृश्य संपादित करें",
-  "timeview_save": "समयदृश्य सहेजें",
-  "catalogs_show": "कैटलाग",
-  "database_show": "डेटाबेस दिखाएँ",
-  "load": "लोड पैनल और बॉक्स",
-  "cosmos_show": "पृष्ठभूमि टॉगल करें",
-  "cat_science": "विज्ञान",
-  "cat_power": "शक्ति",
-  "cat_culture": "संस्कृति",
-  "cat_trade": "व्यापार",
-  "cat_being": "प्राणी",
-  "settings": "सेटिंग्स",
-  "wikipedia": "विकिपीडिया",
-  "toggle_wsbackgd": "पृष्ठभूमि",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "टॉगल लेआउट",
-  "wikiback": "पीछे",
-  "wikiforward": "आगे",
-  "wikinewtab": "नया टैब",
-  "debug_select": "डीबग मेनू",
-  "debug_onoff": "डिबग मोड",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "चार्ट दिखाएँ/छिपाएँ",
-  "timepanel_show": "टाइमपैनल तालिका",
-  "wikipage_show": "विकिपीडिया पृष्ठ दिखाएँ",
-  "wikidates_show": "विकी तिथियों को तालिका में दिखाएँ",
-  "tableTO_show": "TimeObjects तालिका दिखाएँ (डीबग)",
-  "tablePL_show": "पैनललाइन्स तालिका दिखाएँ (डीबग)",
-  "on": "हाँ",
-  "off": "नहीं",
-  "source_possible": "स्रोत सामग्री चुनें (पूरी सूची टीबीडी)",
-  "source_select": "स्रोत:",
-  "credits": "क्रेडिट",
-  "cred_cosmos": "कॉसमॉस मास्टर: डेनिस",
-  "cred_timeline": "टाइम जीनियस: बोगदान",
-  "cred_backend": "बादल देवता: अयूब",
-  "cred_wikipedia": "विकिपीडिया विज़ार्ड: सबात",
-  "cred_project": "माइंडफुलनेस: पियरे",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "ब्रिटानिका",
-  "source_citizendium": "सिटिज़नडियम",
-  "source_encyclopedia.com": "विश्वकोश",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "इंटरनेट संग्रह",
-  "source_projectgutemberg": "प्रोजेक्ट गुटेम्बर्ग",
-  "source_qiuwenbaike": "किउवेन बाइके",
-  "source_scholarpedia": "स्कॉलरपीडिया",
-  "source_unesco": "यूनेस्को",
-  "source_wikipedia": "विकिपीडिया",
-  "source_grokipedia": "ग्रोकिपीडिया",
-  "source_worldhistory": "दुनिया के इतिहास",
-  "cal_gregorian": "ग्रेगोरियन",
-  "cal_islamic": "इस्लामी (हिजरी)",
-  "cal_chinese": "चीनी (चंद्र-सौर)",
-  "cal_persian": "फ़ारसी (सौर हिजरी)",
-  "cal_ethiopian": "इथियोपियाई",
-  "cal_hebrew": "यहूदी",
-  "cal_balinese": "बाली (पावुकोन और साका)",
-  "cal_creationist": "निर्माणवादी",
-  "cal_gregorian_explanation": "विश्व उपयोग: 95% (आधिकारिक उपयोग) - लगभग हर देश में आधिकारिक, आर्थिक और अंतर्राष्ट्रीय उद्देश्यों के लिए नागरिक कैलेंडर के रूप में इसका उपयोग किया जाता है। यहाँ तक कि अन्य कैलेंडर का पालन करने वाले लोग भी अक्सर ग्रेगोरियन कैलेंडर का ही दैनिक उपयोग करते हैं।",
-  "cal_islamic_explanation": "विश्व उपयोग: 24% (धार्मिक उपयोग) - लगभग 2 अरब मुसलमानों द्वारा अनुसरण किया जाता है (विश्व का लगभग 24%)। मुख्यतः धार्मिक छुट्टियों (रमज़ान, हज, आदि) के लिए, लेकिन सामान्यतः नागरिक प्रशासन के लिए नहीं (सऊदी अरब को छोड़कर)।",
-  "cal_chinese_explanation": "विश्व उपयोग: 18% (सांस्कृतिक उपयोग) - लगभग 1.4 अरब चीनी लोगों और प्रवासी चीनी समुदायों द्वारा चंद्र नव वर्ष जैसे त्योहारों पर मनाया जाता है। नागरिक प्रशासन के लिए उपयोग नहीं किया जाता।",
-  "cal_persian_explanation": "विश्व उपयोग: 1.5% (नागरिक और सांस्कृतिक उपयोग) - ईरान (~89M) और अफगानिस्तान (~41M) में आधिकारिक कैलेंडर, कुल मिलाकर ~130M।",
-  "cal_balinese_explanation": "विश्व उपयोग: 1.5% (नागरिक उपयोग) - इथियोपिया में आधिकारिक (~126M) और इरीट्रिया में उपयोग किया जाता है।",
-  "cal_hebrew_explanation": "विश्व उपयोग: 0.2% (धार्मिक उपयोग) - यहूदी समुदायों (~16 मिलियन लोग) द्वारा धार्मिक उद्देश्यों के लिए उपयोग किया जाता है।",
-  "cal_ethiopian_explanation": "विश्व उपयोग: <0.1% (सांस्कृतिक उपयोग) - मुख्य रूप से बाली (इंडोनेशिया) में उपयोग किया जाता है, ~4.5 मिलियन लोग।",
-  "cal_creationist_explanation": "विश्व उपयोग: <0.01% (विशिष्ट उपयोग) - दुर्लभ; कुछ कट्टरपंथी ईसाई समुदाय गणना की गई \"सृजन तिथियों\" का उपयोग करते हैं, लेकिन कार्यात्मक कैलेंडर प्रणाली के रूप में नहीं।"
+  "tv_2020s_wikipedia": ""
 }
