--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -16,6 +16,100 @@
   "unit_billion": "Md",
   "unit_million": "Mn",
   "unit_thousand": "k",
+  "trello": "Trello",
+  "source": "fonte",
+  "version": "versione",
+  "account_normal": "Conto normale",
+  "account_pro": "Account professionale",
+  "account_teacher": "Account insegnante",
+  "toggle_vh": "Attiva/disattiva verticale/orizzontale",
+  "timeview_edition": "Visualizzazioni temporali",
+  "search_show": "Ricerca",
+  "timeview1_show": "Mostra/Nascondi la visualizzazione temporale principale",
+  "timeview2_show": "Mostra/Nascondi la visualizzazione temporale alternativa",
+  "timeview3_show": "Mostra/Nascondi la visualizzazione temporale alternativa",
+  "timeview1_set": "Modifica la visualizzazione temporale principale",
+  "timeview2_set": "Modifica la visualizzazione temporale alternativa",
+  "timeview_save": "Salva la visualizzazione del tempo",
+  "catalogs_show": "Cataloghi",
+  "database_show": "Mostra database",
+  "load": "Pannelli e scatole di carico",
+  "cosmos_show": "Attiva/disattiva sfondo",
+  "cat_science": "Scienza",
+  "cat_power": "Energia",
+  "cat_culture": "Cultura",
+  "cat_trade": "Commercio",
+  "cat_being": "Essendo",
+  "settings": "Impostazioni",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Sfondo",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Attiva/disattiva layout",
+  "wikiback": "Indietro",
+  "wikiforward": "Inoltrare",
+  "wikinewtab": "Nuova scheda",
+  "debug_select": "Menu di debug",
+  "debug_onoff": "Modalità di debug",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Mostra/nascondi grafico",
+  "timepanel_show": "Tabella timePanel",
+  "wikipage_show": "Mostra la pagina di Wikipedia",
+  "wikidates_show": "Mostra le date wiki in una tabella",
+  "tableTO_show": "Mostra la tabella TimeObjects (debug)",
+  "tablePL_show": "Mostra la tabella PanelLines (debug)",
+  "on": "SÌ",
+  "off": "NO",
+  "source_possible": "Seleziona il contenuto sorgente (elenco completo da definire)",
+  "source_select": "Fonte:",
+  "credits": "Crediti",
+  "cred_cosmos": "Maestro del Cosmo: Denys",
+  "cred_timeline": "Genio del tempo: Bogdan",
+  "cred_backend": "Dio delle nuvole:",
+  "cred_wikipedia": "Wikipedia Wizard: Sabat",
+  "cred_project": "Consapevolezza: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Citizendium",
+  "source_encyclopedia.com": "Enciclopedia",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "Archivio Internet",
+  "source_projectgutemberg": "Progetto Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "Unesco",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "Storia del mondo",
+  "cal_name": "Calendario:",
+  "cal_availability_yes": "Disponibile",
+  "cal_availability_no": "Non ancora pronto (abbiamo bisogno di aiuto... contributo-sito-web-qui)",
+  "cal_other": "Calendari",
+  "cal_usage": "Utilizzo:",
+  "cal_gregorian": "gregoriano",
+  "cal_islamic": "Islamico (Hijri)",
+  "cal_chinese": "cinese",
+  "cal_persian": "Persiano (Egira solare)",
+  "cal_ethiopian": "etiope",
+  "cal_hebrew": "ebraico",
+  "cal_balinese": "Balinese",
+  "cal_creationist": "creazionista",
+  "cal_gregorian_explanation": "Calendario solare, 12 mesi, 365-366 giorni, introdotto da Papa Gregorio XIII nel 1582.",
+  "cal_islamic_explanation": "Il calendario lunare, 12 mesi, 354-355 giorni, inizia con la migrazione di Maometto a Medina (622 d.C.).",
+  "cal_chinese_explanation": "Calendario lunisolare, che combina i mesi lunari, l'anno solare e il ciclo zodiacale di 12 anni degli animali. Utilizzato per le feste tradizionali dell'Asia orientale.",
+  "cal_persian_explanation": "Il calendario solare, di 365-366 giorni, inizia con l'equinozio di primavera (Nowruz).",
+  "cal_balinese_explanation": "Sistema di calendario che combina cicli simultanei, tra cui un calendario Pawukon di 210 giorni. Utilizzato per le cerimonie religiose.",
+  "cal_hebrew_explanation": "Calendario lunisolare, 12-13 mesi, inizia dalla creazione (3761 a.C.). Utilizzato per le osservanze religiose.",
+  "cal_ethiopian_explanation": "Calendario solare, 13 mesi (12 di 30 giorni e 1 di 5-6 giorni), 7-8 anni indietro rispetto al calendario gregoriano.",
+  "cal_creationist_explanation": "Quadro cronologico: calcola l'età della Terra dalle genealogie bibliche, collocando la creazione tra 6.000 e 10.000 anni fa.",
+  "cal_gregorian_usage": "Utilizzo: 95% (ufficiale) - Utilizzato come calendario civile in quasi tutti i paesi per scopi ufficiali ed economici.",
+  "cal_islamic_usage": "Utilizzo: 24% (religioso) - Osservato da circa 2 miliardi di musulmani (circa il 24% del mondo), principalmente per le festività religiose (Ramadan, Hajj, ecc.).",
+  "cal_chinese_usage": "Utilizzo: 18% (culturale) - Celebrato da circa 1,4 miliardi di cinesi in occasione di festività come il Capodanno lunare.",
+  "cal_persian_usage": "Utilizzo: 1,5% (civile/culturale) - Calendario ufficiale in Iran (~89M) e Afghanistan (~41M).",
+  "cal_balinese_usage": "Utilizzo: 1,5% (civile) - Ufficiale in Etiopia (~126M) e utilizzato in Eritrea.",
+  "cal_hebrew_usage": "Utilizzo: 0,2% (religioso) - Utilizzato dalle comunità ebraiche (~16 milioni di persone) per scopi religiosi.",
+  "cal_ethiopian_usage": "Utilizzo: <0,1% (culturale) - Utilizzato principalmente a Bali (Indonesia), circa 4,5 milioni di persone.",
+  "cal_creationist_usage": "Utilizzo: <0,01% (nicchia) - Utilizzato da alcune comunità cristiane fondamentaliste.",
   "tv_universe": "Universo",
   "tv_life": "Vita",
   "tv_dinosaurs": "Dinosauri",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "fonte",
-  "version": "versione",
-  "account_normal": "Conto normale",
-  "account_pro": "Account professionale",
-  "account_teacher": "Account insegnante",
-  "toggle_vh": "Attiva/disattiva verticale/orizzontale",
-  "timeview_edition": "Modifica visualizzazioni temporali",
-  "search_show": "Ricerca",
-  "timeview1_show": "Mostra/Nascondi la visualizzazione temporale principale",
-  "timeview2_show": "Mostra/Nascondi la visualizzazione temporale alternativa",
-  "timeview1_set": "Modifica la visualizzazione temporale principale",
-  "timeview2_set": "Modifica la visualizzazione temporale alternativa",
-  "timeview_save": "Salva la visualizzazione del tempo",
-  "catalogs_show": "Cataloghi",
-  "database_show": "Mostra database",
-  "load": "Pannelli e scatole di carico",
-  "cosmos_show": "Attiva/disattiva sfondo",
-  "cat_science": "Scienza",
-  "cat_power": "Energia",
-  "cat_culture": "Cultura",
-  "cat_trade": "Commercio",
-  "cat_being": "Essendo",
-  "settings": "Impostazioni",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Sfondo",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Attiva/disattiva layout",
-  "wikiback": "Indietro",
-  "wikiforward": "Inoltrare",
-  "wikinewtab": "Nuova scheda",
-  "debug_select": "Menu di debug",
-  "debug_onoff": "Modalità di debug",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Mostra/nascondi grafico",
-  "timepanel_show": "Tabella timePanel",
-  "wikipage_show": "Mostra la pagina di Wikipedia",
-  "wikidates_show": "Mostra le date wiki in una tabella",
-  "tableTO_show": "Mostra la tabella TimeObjects (debug)",
-  "tablePL_show": "Mostra la tabella PanelLines (debug)",
-  "on": "SÌ",
-  "off": "NO",
-  "source_possible": "Seleziona il contenuto sorgente (elenco completo da definire)",
-  "source_select": "Fonte:",
-  "credits": "Crediti",
-  "cred_cosmos": "Maestro del Cosmo: Denys",
-  "cred_timeline": "Genio del tempo: Bogdan",
-  "cred_backend": "Dio delle nuvole: Ayoub",
-  "cred_wikipedia": "Wikipedia Wizard: Sabat",
-  "cred_project": "Consapevolezza: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Citizendium",
-  "source_encyclopedia.com": "Enciclopedia",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Archivio Internet",
-  "source_projectgutemberg": "Progetto Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "Unesco",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "Storia del mondo",
-  "cal_gregorian": "gregoriano",
-  "cal_islamic": "Islamico (Hijri)",
-  "cal_chinese": "Cinese (Lunisolare)",
-  "cal_persian": "Persiano (Egira solare)",
-  "cal_ethiopian": "etiope",
-  "cal_hebrew": "ebraico",
-  "cal_balinese": "Balinese (Pawukon e Saka)",
-  "cal_creationist": "creazionista",
-  "cal_gregorian_explanation": "Utilizzo mondiale: 95% (uso ufficiale) - Utilizzato come calendario civile in quasi tutti i paesi per scopi ufficiali, economici e internazionali. Anche le persone che seguono altri calendari spesso usano il calendario gregoriano nella vita quotidiana.",
-  "cal_islamic_explanation": "Utilizzo mondiale: 24% (uso religioso) - Seguito da circa 2 miliardi di musulmani (circa il 24% del mondo). Principalmente per le festività religiose (Ramadan, Hajj, ecc.) ma non tipicamente per l'amministrazione civile (tranne che in Arabia Saudita).",
-  "cal_chinese_explanation": "Utilizzo mondiale: 18% (uso culturale) - Celebrato da circa 1,4 miliardi di cinesi e dalle comunità cinesi all'estero per festività come il Capodanno lunare. Non utilizzato per l'amministrazione civile.",
-  "cal_persian_explanation": "Utilizzo mondiale: 1,5% (uso civile e culturale) - Calendario ufficiale in Iran (~89M) e Afghanistan (~41M), per un totale di ~130M.",
-  "cal_balinese_explanation": "Utilizzo mondiale: 1,5% (uso civile) - Ufficiale in Etiopia (~126M) e utilizzato in Eritrea.",
-  "cal_hebrew_explanation": "Utilizzo mondiale: 0,2% (uso religioso) - Utilizzato dalle comunità ebraiche (~16 milioni di persone) per scopi religiosi.",
-  "cal_ethiopian_explanation": "Utilizzo mondiale: <0,1% (uso culturale) - Utilizzato principalmente a Bali (Indonesia), circa 4,5 milioni di persone.",
-  "cal_creationist_explanation": "Utilizzo mondiale: <0,01% (uso di nicchia) - Raro; alcune comunità cristiane fondamentaliste utilizzano \"date di creazione\" calcolate, ma non come sistema di calendario funzionale."
+  "tv_2020s_wikipedia": ""
 }
