--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -16,6 +16,100 @@
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
+  "trello": "トレロ",
+  "source": "ソース",
+  "version": "バージョン",
+  "account_normal": "通常アカウント",
+  "account_pro": "プロフェッショナルアカウント",
+  "account_teacher": "教師アカウント",
+  "toggle_vh": "垂直/水平を切り替える",
+  "timeview_edition": "タイムビュー",
+  "search_show": "検索",
+  "timeview1_show": "メインタイムビューの表示/非表示",
+  "timeview2_show": "代替タイムビューの表示/非表示",
+  "timeview3_show": "代替タイムビューの表示/非表示",
+  "timeview1_set": "メインタイムビューを編集",
+  "timeview2_set": "代替タイムビューを編集",
+  "timeview_save": "タイムビューを保存",
+  "catalogs_show": "カタログ",
+  "database_show": "データベースを表示",
+  "load": "パネルとボックスを積載する",
+  "cosmos_show": "背景を切り替える",
+  "cat_science": "科学",
+  "cat_power": "力",
+  "cat_culture": "文化",
+  "cat_trade": "貿易",
+  "cat_being": "いる",
+  "settings": "設定",
+  "wikipedia": "ウィキペディア",
+  "toggle_wsbackgd": "背景",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "レイアウトを切り替える",
+  "wikiback": "戻る",
+  "wikiforward": "フォワード",
+  "wikinewtab": "新しいタブ",
+  "debug_select": "デバッグメニュー",
+  "debug_onoff": "デバッグモード",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "チャートの表示/非表示",
+  "timepanel_show": "timePanel テーブル",
+  "wikipage_show": "Wikipediaページを表示",
+  "wikidates_show": "Wikiの日付を表に表示する",
+  "tableTO_show": "TimeObjects テーブルを表示 (デバッグ)",
+  "tablePL_show": "PanelLines テーブルを表示 (デバッグ)",
+  "on": "はい",
+  "off": "いいえ",
+  "source_possible": "ソースコンテンツを選択（完全なリストは未定）",
+  "source_select": "ソース：",
+  "credits": "クレジット",
+  "cred_cosmos": "コスモスマスター：デニス",
+  "cred_timeline": "時間の天才：ボグダン",
+  "cred_backend": "雲神：",
+  "cred_wikipedia": "Wikipediaウィザード：サバト",
+  "cred_project": "マインドフルネス：ピエール",
+  "source_baidubaike": "百度白科",
+  "source_britannica": "ブリタニカ",
+  "source_citizendium": "シチズンディウム",
+  "source_encyclopedia.com": "百科事典",
+  "source_imdb": "IMDb",
+  "source_internetarchive": "インターネットアーカイブ",
+  "source_projectgutemberg": "プロジェクト・グーテンベルク",
+  "source_qiuwenbaike": "秋文白科",
+  "source_scholarpedia": "スカラーペディア",
+  "source_unesco": "ユネスコ",
+  "source_wikipedia": "ウィキペディア",
+  "source_grokipedia": "グロキペディア",
+  "source_worldhistory": "世界史",
+  "cal_name": "カレンダー：",
+  "cal_availability_yes": "利用可能",
+  "cal_availability_no": "まだ準備ができていません (支援が必要です... 貢献ウェブサイトはこちら)",
+  "cal_other": "カレンダー",
+  "cal_usage": "使用法：",
+  "cal_gregorian": "グレゴリオ暦",
+  "cal_islamic": "イスラム教（ヒジュラ暦）",
+  "cal_chinese": "中国語",
+  "cal_persian": "ペルシア語（太陽暦ヒジュラ暦）",
+  "cal_ethiopian": "エチオピア人",
+  "cal_hebrew": "ヘブライ語",
+  "cal_balinese": "バリ人",
+  "cal_creationist": "創造論者",
+  "cal_gregorian_explanation": "1582 年に教皇グレゴリウス 13 世によって導入された、12 か月、365 ～ 366 日の太陽暦。",
+  "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
+  "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
+  "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
+  "cal_balinese_explanation": "210日間のパウコン暦を含む、複数の周期を組み合わせた暦体系。宗教儀式に用いられる。",
+  "cal_hebrew_explanation": "太陰太陽暦（12～13か月）は天地創造（紀元前3761年）から始まります。宗教行事に用いられます。",
+  "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
+  "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
+  "cal_gregorian_usage": "使用率: 95% (公式) - ほぼすべての国で公式および経済目的で民間暦として使用されています。",
+  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に遵守します。",
+  "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
+  "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
+  "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
+  "cal_hebrew_usage": "使用率: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
+  "cal_ethiopian_usage": "使用率: <0.1% (文化的) - 主にバリ島 (インドネシア) で使用されており、約 450 万人が使用しています。",
+  "cal_creationist_usage": "使用率: <0.01% (ニッチ) - いくつかの原理主義キリスト教コミュニティで使用されています。",
   "tv_universe": "宇宙",
   "tv_life": "人生",
   "tv_dinosaurs": "恐竜",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "トレロ",
-  "source": "ソース",
-  "version": "バージョン",
-  "account_normal": "通常アカウント",
-  "account_pro": "プロフェッショナルアカウント",
-  "account_teacher": "教師アカウント",
-  "toggle_vh": "垂直/水平を切り替える",
-  "timeview_edition": "タイムビューを編集する",
-  "search_show": "検索",
-  "timeview1_show": "メインタイムビューの表示/非表示",
-  "timeview2_show": "代替タイムビューの表示/非表示",
-  "timeview1_set": "メインタイムビューを編集",
-  "timeview2_set": "代替タイムビューを編集",
-  "timeview_save": "タイムビューを保存",
-  "catalogs_show": "カタログ",
-  "database_show": "データベースを表示",
-  "load": "パネルとボックスを積載する",
-  "cosmos_show": "背景を切り替える",
-  "cat_science": "科学",
-  "cat_power": "力",
-  "cat_culture": "文化",
-  "cat_trade": "貿易",
-  "cat_being": "いる",
-  "settings": "設定",
-  "wikipedia": "ウィキペディア",
-  "toggle_wsbackgd": "背景",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "レイアウトを切り替える",
-  "wikiback": "戻る",
-  "wikiforward": "フォワード",
-  "wikinewtab": "新しいタブ",
-  "debug_select": "デバッグメニュー",
-  "debug_onoff": "デバッグモード",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "チャートの表示/非表示",
-  "timepanel_show": "timePanel テーブル",
-  "wikipage_show": "Wikipediaページを表示",
-  "wikidates_show": "Wikiの日付を表に表示する",
-  "tableTO_show": "TimeObjects テーブルを表示 (デバッグ)",
-  "tablePL_show": "PanelLines テーブルを表示 (デバッグ)",
-  "on": "はい",
-  "off": "いいえ",
-  "source_possible": "ソースコンテンツを選択（完全なリストは未定）",
-  "source_select": "ソース：",
-  "credits": "クレジット",
-  "cred_cosmos": "コスモスマスター：デニス",
-  "cred_timeline": "時間の天才：ボグダン",
-  "cred_backend": "雲の神：アユブ",
-  "cred_wikipedia": "Wikipediaウィザード：サバト",
-  "cred_project": "マインドフルネス：ピエール",
-  "source_baidubaike": "百度白科",
-  "source_britannica": "ブリタニカ",
-  "source_citizendium": "シチズンディウム",
-  "source_encyclopedia.com": "百科事典",
-  "source_imdb": "IMDb",
-  "source_internetarchive": "インターネットアーカイブ",
-  "source_projectgutemberg": "プロジェクト・グーテンベルク",
-  "source_qiuwenbaike": "秋文白科",
-  "source_scholarpedia": "スカラーペディア",
-  "source_unesco": "ユネスコ",
-  "source_wikipedia": "ウィキペディア",
-  "source_grokipedia": "グロキペディア",
-  "source_worldhistory": "世界史",
-  "cal_gregorian": "グレゴリオ暦",
-  "cal_islamic": "イスラム教（ヒジュラ暦）",
-  "cal_chinese": "中国語（太陰太陽暦）",
-  "cal_persian": "ペルシア語（太陽暦ヒジュラ暦）",
-  "cal_ethiopian": "エチオピア人",
-  "cal_hebrew": "ヘブライ語",
-  "cal_balinese": "バリ語（パウコン語とサカ語）",
-  "cal_creationist": "創造論者",
-  "cal_gregorian_explanation": "世界での使用率：95%（公用） - ほぼすべての国で、公用、経済、国際目的で民間暦として使用されています。他の暦を使用している人でも、日常的にはグレゴリオ暦を使用していることが多いです。",
-  "cal_islamic_explanation": "世界の使用率：24%（宗教的使用） - 約20億人のイスラム教徒（世界の約24%）がこれに続きます。主に宗教的祝祭日（ラマダン、ハッジなど）に使用されており、行政目的で使用されることはあまりありません（サウジアラビアを除く）。",
-  "cal_chinese_explanation": "世界における使用率：18%（文化的な用途） - 約14億人の中国人と海外華僑コミュニティが、春節などの祝祭で使用しています。民政では使用されていません。",
-  "cal_persian_explanation": "世界での使用状況: 1.5% (民間および文化的な使用) - イラン (約 8,900 万) とアフガニスタン (約 4,100 万) の公式カレンダー、合計で約 1 億 3,000 万。",
-  "cal_balinese_explanation": "世界での使用率: 1.5% (民間使用) - エチオピア(~126M)で公式に使用され、エリトリアで使用されています。",
-  "cal_hebrew_explanation": "世界での使用状況: 0.2% (宗教的使用) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
-  "cal_ethiopian_explanation": "世界での使用状況: <0.1% (文化的使用) - 主にバリ島 (インドネシア) で使用されており、約 450 万人が使用しています。",
-  "cal_creationist_explanation": "世界での使用率: <0.01% (ニッチな使用) - まれ。少数の原理主義キリスト教コミュニティは計算された「創造の日付」を使用しますが、機能的な暦システムとしては使用していません。"
+  "tv_2020s_wikipedia": ""
 }
