--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -16,6 +16,100 @@
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
+  "trello": "Trello",
+  "source": "źródło",
+  "version": "wersja",
+  "account_normal": "Konto normalne",
+  "account_pro": "Konto profesjonalne",
+  "account_teacher": "Konto nauczyciela",
+  "toggle_vh": "Przełącz pion/poziom",
+  "timeview_edition": "Widoki czasowe",
+  "search_show": "Szukaj",
+  "timeview1_show": "Pokaż/Ukryj główny widok czasu",
+  "timeview2_show": "Pokaż/Ukryj alternatywny widok czasu",
+  "timeview3_show": "Pokaż/Ukryj alternatywny widok czasu",
+  "timeview1_set": "Edytuj główny widok czasu",
+  "timeview2_set": "Edytuj alternatywny widok czasu",
+  "timeview_save": "Zapisz widok czasu",
+  "catalogs_show": "Katalogi",
+  "database_show": "Pokaż bazę danych",
+  "load": "Panele i skrzynki ładunkowe",
+  "cosmos_show": "Przełącz tło",
+  "cat_science": "Nauka",
+  "cat_power": "Moc",
+  "cat_culture": "Kultura",
+  "cat_trade": "Handel",
+  "cat_being": "Istnienie",
+  "settings": "Ustawienia",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Tło",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Przełącz układ",
+  "wikiback": "Z powrotem",
+  "wikiforward": "Do przodu",
+  "wikinewtab": "Nowa karta",
+  "debug_select": "Menu debugowania",
+  "debug_onoff": "Tryb debugowania",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Pokaż/ukryj wykres",
+  "timepanel_show": "Tabela timePanel",
+  "wikipage_show": "Pokaż stronę Wikipedii",
+  "wikidates_show": "Pokaż daty wiki w tabeli",
+  "tableTO_show": "Pokaż tabelę TimeObjects (debugowanie)",
+  "tablePL_show": "Pokaż tabelę PanelLines (debugowanie)",
+  "on": "Tak",
+  "off": "NIE",
+  "source_possible": "Wybierz treść źródłową (pełna lista wkrótce)",
+  "source_select": "Źródło:",
+  "credits": "Kredyty",
+  "cred_cosmos": "Mistrz Kosmosu: Denys",
+  "cred_timeline": "Geniusz czasu: Bogdan",
+  "cred_backend": "Bóg chmur:",
+  "cred_wikipedia": "Czarodziej Wikipedii: Sabat",
+  "cred_project": "Uważność: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Obywatelstwo",
+  "source_encyclopedia.com": "Encyklopedia",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "Archiwum Internetowe",
+  "source_projectgutemberg": "Projekt Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "UNESCO",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "Historia świata",
+  "cal_name": "Kalendarz:",
+  "cal_availability_yes": "Dostępny",
+  "cal_availability_no": "Jeszcze nie gotowe (potrzebujemy pomocy... wkład-strona-tutaj)",
+  "cal_other": "Kalendarze",
+  "cal_usage": "Stosowanie:",
+  "cal_gregorian": "gregoriański",
+  "cal_islamic": "Islamski (Hidżry)",
+  "cal_chinese": "chiński",
+  "cal_persian": "Perski (słoneczny Hidżry)",
+  "cal_ethiopian": "etiopczyk",
+  "cal_hebrew": "hebrajski",
+  "cal_balinese": "Balijski",
+  "cal_creationist": "Kreacjonista",
+  "cal_gregorian_explanation": "Kalendarz słoneczny, 12 miesięcy, 365-366 dni, wprowadzony przez papieża Grzegorza XIII w 1582 roku.",
+  "cal_islamic_explanation": "Kalendarz księżycowy, składający się z 12 miesięcy i 354–355 dni, rozpoczyna się wraz z emigracją Mahometa do Medyny (622 r. n.e.).",
+  "cal_chinese_explanation": "Kalendarz księżycowo-słoneczny, łączący miesiące księżycowe, rok słoneczny i 12-letni cykl zodiakalny zwierząt. Używany podczas tradycyjnych świąt wschodnioazjatyckich.",
+  "cal_persian_explanation": "Kalendarz słoneczny, liczący 365–366 dni, rozpoczyna się od równonocy wiosennej (Nowruz).",
+  "cal_balinese_explanation": "System kalendarzowy łączący równoległe cykle, w tym 210-dniowy kalendarz Pawukon. Używany podczas ceremonii religijnych.",
+  "cal_hebrew_explanation": "Kalendarz księżycowo-słoneczny, 12-13-miesięczny, rozpoczyna się od stworzenia świata (3761 r. p.n.e.). Używany do obrzędów religijnych.",
+  "cal_ethiopian_explanation": "Kalendarz słoneczny, 13 miesięcy (12 po 30 dni i 1 miesiąc po 5-6 dni), opóźniony o 7-8 lat w stosunku do kalendarza gregoriańskiego.",
+  "cal_creationist_explanation": "Ramy chronologiczne, obliczają wiek Ziemi na podstawie biblijnych genealogii, umieszczając stworzenie Ziemi na 6000–10 000 lat temu.",
+  "cal_gregorian_usage": "Wykorzystanie: 95% (oficjalne) – Używany jako kalendarz cywilny w niemal każdym kraju do celów oficjalnych i ekonomicznych.",
+  "cal_islamic_usage": "Zastosowanie: 24% (religijne) – Przestrzegane przez ~2 miliardy muzułmanów (~24% świata), głównie z okazji świąt religijnych (Ramadan, Hadżdż itp.).",
+  "cal_chinese_usage": "Użycie: 18% (kulturowe) – obchodzone przez ok. 1,4 miliarda Chińczyków podczas świąt takich jak Nowy Rok Księżycowy.",
+  "cal_persian_usage": "Użycie: 1,5% (cywilne/kulturalne) – oficjalny kalendarz w Iranie (~89 mln) i Afganistanie (~41 mln).",
+  "cal_balinese_usage": "Zastosowanie: 1,5% (cywilne) – oficjalne w Etiopii (~126 mln) i używane w Erytrei.",
+  "cal_hebrew_usage": "Zastosowanie: 0,2% (religijne) – używane przez społeczności żydowskie (ok. 16 mln osób) w celach religijnych.",
+  "cal_ethiopian_usage": "Zastosowanie: <0,1% (kulturowe) – używane głównie na Bali (Indonezja), ok. 4,5 mln osób.",
+  "cal_creationist_usage": "Zastosowanie: <0,01% (nisza) – używane przez kilka wspólnot chrześcijańskich o charakterze fundamentalistycznym.",
   "tv_universe": "Wszechświat",
   "tv_life": "Życie",
   "tv_dinosaurs": "Dinozaury",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "źródło",
-  "version": "wersja",
-  "account_normal": "Konto normalne",
-  "account_pro": "Konto profesjonalne",
-  "account_teacher": "Konto nauczyciela",
-  "toggle_vh": "Przełącz pion/poziom",
-  "timeview_edition": "Edytuj widoki czasowe",
-  "search_show": "Szukaj",
-  "timeview1_show": "Pokaż/Ukryj główny widok czasu",
-  "timeview2_show": "Pokaż/Ukryj alternatywny widok czasu",
-  "timeview1_set": "Edytuj główny widok czasu",
-  "timeview2_set": "Edytuj alternatywny widok czasu",
-  "timeview_save": "Zapisz widok czasu",
-  "catalogs_show": "Katalogi",
-  "database_show": "Pokaż bazę danych",
-  "load": "Panele i skrzynki ładunkowe",
-  "cosmos_show": "Przełącz tło",
-  "cat_science": "Nauka",
-  "cat_power": "Moc",
-  "cat_culture": "Kultura",
-  "cat_trade": "Handel",
-  "cat_being": "Istnienie",
-  "settings": "Ustawienia",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Tło",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Przełącz układ",
-  "wikiback": "Z powrotem",
-  "wikiforward": "Do przodu",
-  "wikinewtab": "Nowa karta",
-  "debug_select": "Menu debugowania",
-  "debug_onoff": "Tryb debugowania",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Pokaż/ukryj wykres",
-  "timepanel_show": "Tabela timePanel",
-  "wikipage_show": "Pokaż stronę Wikipedii",
-  "wikidates_show": "Pokaż daty wiki w tabeli",
-  "tableTO_show": "Pokaż tabelę TimeObjects (debugowanie)",
-  "tablePL_show": "Pokaż tabelę PanelLines (debugowanie)",
-  "on": "Tak",
-  "off": "NIE",
-  "source_possible": "Wybierz treść źródłową (pełna lista wkrótce)",
-  "source_select": "Źródło:",
-  "credits": "Kredyty",
-  "cred_cosmos": "Mistrz Kosmosu: Denys",
-  "cred_timeline": "Geniusz czasu: Bogdan",
-  "cred_backend": "Bóg Chmur: Ayoub",
-  "cred_wikipedia": "Czarodziej Wikipedii: Sabat",
-  "cred_project": "Uważność: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Obywatelstwo",
-  "source_encyclopedia.com": "Encyklopedia",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Archiwum Internetowe",
-  "source_projectgutemberg": "Projekt Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "UNESCO",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "Historia świata",
-  "cal_gregorian": "gregoriański",
-  "cal_islamic": "Islamski (Hidżry)",
-  "cal_chinese": "chiński (księżycowo-słoneczny)",
-  "cal_persian": "Perski (słoneczny Hidżry)",
-  "cal_ethiopian": "etiopczyk",
-  "cal_hebrew": "hebrajski",
-  "cal_balinese": "Balijski (Pawukon i Saka)",
-  "cal_creationist": "Kreacjonista",
-  "cal_gregorian_explanation": "Użycie na świecie: 95% (użycie oficjalne) – używany jako kalendarz cywilny w prawie każdym kraju do celów oficjalnych, ekonomicznych i międzynarodowych. Nawet osoby korzystające z innych kalendarzy często korzystają z kalendarza gregoriańskiego.",
-  "cal_islamic_explanation": "Światowe wykorzystanie: 24% (wykorzystanie religijne) – Na drugim miejscu plasuje się około 2 miliardy muzułmanów (ok. 24% populacji świata). Głównie w święta religijne (Ramadan, Hadżdż itp.), ale nie jest to typowe dla administracji cywilnej (z wyjątkiem Arabii Saudyjskiej).",
-  "cal_chinese_explanation": "Użycie na świecie: 18% (użycie kulturowe) – Obchodzone przez około 1,4 miliarda Chińczyków i społeczności chińskie za granicą z okazji świąt takich jak Nowy Rok Księżycowy. Nieużywane przez administrację cywilną.",
-  "cal_persian_explanation": "Wykorzystanie na świecie: 1,5% (użycie cywilne i kulturalne) - oficjalny kalendarz w Iranie (~89 mln) i Afganistanie (~41 mln), łącznie ~130 mln.",
-  "cal_balinese_explanation": "Wykorzystanie na świecie: 1,5% (użycie cywilne) – oficjalne w Etiopii (~126 mln), używane w Erytrei.",
-  "cal_hebrew_explanation": "Wykorzystanie na świecie: 0,2% (wykorzystanie religijne) – wykorzystywane przez społeczności żydowskie (ok. 16 mln osób) w celach religijnych.",
-  "cal_ethiopian_explanation": "Wykorzystanie na świecie: <0,1% (użycie kulturowe) – głównie na Bali (Indonezja), ok. 4,5 mln osób.",
-  "cal_creationist_explanation": "Wykorzystanie na świecie: <0,01% (użycie niszowe) – rzadkie; niektóre wspólnoty chrześcijańskich o fundamentalistycznym nastawieniu używają obliczonych „dat stworzenia”, ale nie jako funkcjonalnego systemu kalendarzowego."
+  "tv_2020s_wikipedia": ""
 }
