--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -16,6 +16,100 @@
   "unit_billion": "млрд",
   "unit_million": "млн",
   "unit_thousand": "тыс.",
+  "trello": "Trello",
+  "source": "источник",
+  "version": "версия",
+  "account_normal": "Обычный аккаунт",
+  "account_pro": "Профессиональный аккаунт",
+  "account_teacher": "Аккаунт учителя",
+  "toggle_vh": "Переключить вертикально/горизонтально",
+  "timeview_edition": "Редактировать Timeviews",
+  "search_show": "Поиск",
+  "timeview1_show": "Показать/скрыть основной Timeview",
+  "timeview2_show": "Показать/скрыть альтернативный временной режим",
+  "timeview3_show": "Показать/скрыть альтернативный временной режим",
+  "timeview1_set": "Редактировать основной режим просмотра времени",
+  "timeview2_set": "Редактировать альтернативный режим просмотра времени",
+  "timeview_save": "Сохранить Timeview",
+  "catalogs_show": "Каталоги",
+  "database_show": "Показать базу данных",
+  "load": "Загрузить панели и блоки",
+  "cosmos_show": "Переключить фон",
+  "cat_science": "Наука",
+  "cat_power": "Власть",
+  "cat_culture": "Культура",
+  "cat_trade": "Торговля",
+  "cat_being": "Существование",
+  "settings": "Настройки",
+  "wikipedia": "Википедия",
+  "toggle_wsbackgd": "Фон",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Переключить макет",
+  "wikiback": "Назад",
+  "wikiforward": "Вперед",
+  "wikinewtab": "Новая вкладка",
+  "debug_select": "Меню отладки",
+  "debug_onoff": "режим отладки",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Показать/скрыть диаграмму",
+  "timepanel_show": "таблица timePanel",
+  "wikipage_show": "Показать страницу Википедии",
+  "wikidates_show": "Отображение дат из вики в таблице",
+  "tableTO_show": "Показать таблицу TimeObjects (отладка)",
+  "tablePL_show": "Показать таблицу PanelLines (отладка)",
+  "on": "да",
+  "off": "нет",
+  "source_possible": "Выберите исходный контент (полный список уточняется)",
+  "source_select": "Источник:",
+  "credits": "Кредиты",
+  "cred_cosmos": "Мастер Космоса: Денис",
+  "cred_timeline": "Гений времени: Богдан",
+  "cred_backend": "Бог Облаков:",
+  "cred_wikipedia": "Википедия Волшебник: Сабат",
+  "cred_project": "Осознанность: Пьер",
+  "source_baidubaike": "Байду Байке",
+  "source_britannica": "Британника",
+  "source_citizendium": "Гражданиндиум",
+  "source_encyclopedia.com": "Энциклопедия",
+  "source_imdb": "Имдаб",
+  "source_internetarchive": "Интернет-архив",
+  "source_projectgutemberg": "Проект Гутемберг",
+  "source_qiuwenbaike": "Цювэнь Байке",
+  "source_scholarpedia": "Схоларпедия",
+  "source_unesco": "ЮНЕСКО",
+  "source_wikipedia": "Википедия",
+  "source_grokipedia": "Грокипедия",
+  "source_worldhistory": "Всемирная история",
+  "cal_name": "Календарь:",
+  "cal_availability_yes": "Доступный",
+  "cal_availability_no": "Пока не готово (нам нужна помощь... сайт для пожертвований здесь)",
+  "cal_other": "Календари",
+  "cal_usage": "Применение:",
+  "cal_gregorian": "григорианский",
+  "cal_islamic": "Исламский (хиджри)",
+  "cal_chinese": "китайский",
+  "cal_persian": "Персидский (солнечный хиджри)",
+  "cal_ethiopian": "эфиопский",
+  "cal_hebrew": "иврит",
+  "cal_balinese": "балийский",
+  "cal_creationist": "креационист",
+  "cal_gregorian_explanation": "Солнечный календарь, 12 месяцев, 365-366 дней, введенный папой Григорием XIII в 1582 году.",
+  "cal_islamic_explanation": "Лунный календарь, состоящий из 12 месяцев и 354-355 дней, начинается с переселения Мухаммеда в Медину (622 г. н.э.).",
+  "cal_chinese_explanation": "Лунно-солнечный календарь, сочетающий лунные месяцы, солнечный год и 12-летний цикл зодиакальных животных. Используется для традиционных восточноазиатских фестивалей.",
+  "cal_persian_explanation": "Солнечный календарь, состоящий из 365-366 дней, начинается с весеннего равноденствия (Новруза).",
+  "cal_balinese_explanation": "Календарная система, объединяющая одновременные циклы, включая 210-дневный календарь Павукон. Используется для религиозных церемоний.",
+  "cal_hebrew_explanation": "Лунно-солнечный календарь, 12-13 месяцев, начинается с момента сотворения мира (3761 г. до н.э.). Используется для религиозных обрядов.",
+  "cal_ethiopian_explanation": "Солнечный календарь, 13 месяцев (12 из 30 дней и 1 из 5-6 дней), отстает от григорианского календаря на 7-8 лет.",
+  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя период сотворения мира как 6000-10000 лет назад.",
+  "cal_gregorian_usage": "Использование: 95% (официально) - Используется в качестве гражданского календаря почти во всех странах для официальных и экономических целей.",
+  "cal_islamic_usage": "Использование: 24% (религиозные) - Соблюдается примерно 2 миллиардами мусульман (примерно 24% населения мира), в основном во время религиозных праздников (Рамадан, Хадж и т. д.).",
+  "cal_chinese_usage": "Распространенность: 18% (культурная) - Используется примерно 1,4 миллиарда китайцев во время таких праздников, как Китайский Новый год.",
+  "cal_persian_usage": "Использование: 1,5% (гражданское/культурное) - Официальный календарь в Иране (~89 млн) и Афганистане (~41 млн).",
+  "cal_balinese_usage": "Применение: 1,5% (гражданское) - используется в официальных целях в Эфиопии (~126 млн) и в Эритрее.",
+  "cal_hebrew_usage": "Использование: 0,2% (религиозное) - Используется еврейскими общинами (~16 млн человек) в религиозных целях.",
+  "cal_ethiopian_usage": "Распространенность: <0,1% (культурная) - преимущественно используется на Бали (Индонезия), около 4,5 млн человек.",
+  "cal_creationist_usage": "Использование: <0,01% (нишевое) - Используется некоторыми фундаменталистскими христианскими общинами.",
   "tv_universe": "Вселенная",
   "tv_life": "Жизнь",
   "tv_dinosaurs": "Динозавры",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "источник",
-  "version": "версия",
-  "account_normal": "Обычный аккаунт",
-  "account_pro": "Профессиональный аккаунт",
-  "account_teacher": "Аккаунт учителя",
-  "toggle_vh": "Переключить вертикально/горизонтально",
-  "timeview_edition": "Редактировать Timeviews",
-  "search_show": "Поиск",
-  "timeview1_show": "Показать/скрыть основной Timeview",
-  "timeview2_show": "Показать/скрыть альтернативный вид времени",
-  "timeview1_set": "Редактировать основной Timeview",
-  "timeview2_set": "Изменить альтернативный Timeview",
-  "timeview_save": "Сохранить Timeview",
-  "catalogs_show": "Каталоги",
-  "database_show": "Показать базу данных",
-  "load": "Загрузить панели и блоки",
-  "cosmos_show": "Переключить фон",
-  "cat_science": "Наука",
-  "cat_power": "Власть",
-  "cat_culture": "Культура",
-  "cat_trade": "Торговля",
-  "cat_being": "Существование",
-  "settings": "Настройки",
-  "wikipedia": "Википедия",
-  "toggle_wsbackgd": "Фон",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Переключить макет",
-  "wikiback": "Назад",
-  "wikiforward": "Вперед",
-  "wikinewtab": "Новая вкладка",
-  "debug_select": "Меню отладки",
-  "debug_onoff": "debugMode",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Показать/скрыть диаграмму",
-  "timepanel_show": "Таблица timePanel",
-  "wikipage_show": "Показать страницу Википедии",
-  "wikidates_show": "Показать даты вики в таблице",
-  "tableTO_show": "Показать таблицу TimeObjects (отладка)",
-  "tablePL_show": "Показать таблицу PanelLines (отладка)",
-  "on": "да",
-  "off": "нет",
-  "source_possible": "Выберите исходный контент (полный список уточняется)",
-  "source_select": "Источник:",
-  "credits": "Кредиты",
-  "cred_cosmos": "Мастер Космоса: Денис",
-  "cred_timeline": "Гений времени: Богдан",
-  "cred_backend": "Бог облаков: Аюб",
-  "cred_wikipedia": "Мастер Википедии: Сабат",
-  "cred_project": "Осознанность: Пьер",
-  "source_baidubaike": "Байду Байке",
-  "source_britannica": "Британника",
-  "source_citizendium": "Гражданиум",
-  "source_encyclopedia.com": "Энциклопедия",
-  "source_imdb": "Имдб",
-  "source_internetarchive": "Интернет-архив",
-  "source_projectgutemberg": "Проект Гутемберг",
-  "source_qiuwenbaike": "Цювэнь Байке",
-  "source_scholarpedia": "Схоларпедия",
-  "source_unesco": "ЮНЕСКО",
-  "source_wikipedia": "Википедия",
-  "source_grokipedia": "Грокипедия",
-  "source_worldhistory": "Всемирная история",
-  "cal_gregorian": "григорианский",
-  "cal_islamic": "Исламский (хиджра)",
-  "cal_chinese": "Китайский (лунный, солнечный)",
-  "cal_persian": "Персидский (солнечная хиджра)",
-  "cal_ethiopian": "Эфиопский",
-  "cal_hebrew": "иврит",
-  "cal_balinese": "Балийский (Павукон и Сака)",
-  "cal_creationist": "Креационист",
-  "cal_gregorian_explanation": "Мировое использование: 95% (официальное использование) — используется в качестве гражданского календаря практически во всех странах для официальных, экономических и международных целей. Даже те, кто придерживается других календарей, часто используют григорианский в повседневной жизни.",
-  "cal_islamic_explanation": "Мировое использование: 24% (религиозное использование). Около 2 миллиардов мусульман (примерно 24% населения мира) используют этот метод. В основном для религиозных праздников (Рамадан, Хадж и т. д.), но обычно не для гражданских целей (за исключением Саудовской Аравии).",
-  "cal_chinese_explanation": "Мировое использование: 18% (культурное использование) — отмечается примерно 1,4 млрд китайцев и зарубежными китайскими общинами в рамках таких праздников, как Лунный Новый год. Не используется в гражданской администрации.",
-  "cal_persian_explanation": "Мировое использование: 1,5% (гражданское и культурное использование) - Официальный календарь в Иране (~89 млн) и Афганистане (~41 млн), всего ~130 млн.",
-  "cal_balinese_explanation": "Мировое использование: 1,5% (гражданское использование) — официально в Эфиопии (~126 млн) и используется в Эритрее.",
-  "cal_hebrew_explanation": "Мировое использование: 0,2% (религиозное использование) — используется еврейскими общинами (~16 млн человек) в религиозных целях.",
-  "cal_ethiopian_explanation": "Использование в мире: <0,1% (культурное использование) — в основном используется на Бали (Индонезия), ~4,5 млн человек.",
-  "cal_creationist_explanation": "Использование в мире: <0,01% (узкое использование) — редко; несколько фундаменталистских христианских общин используют вычисленные «даты сотворения мира», но не как функциональную календарную систему."
+  "tv_2020s_wikipedia": ""
 }
