--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -16,6 +16,100 @@
   "unit_billion": "млрд",
   "unit_million": "млн",
   "unit_thousand": "тис.",
+  "trello": "Trello",
+  "source": "джерело",
+  "version": "версія",
+  "account_normal": "Звичайний акаунт",
+  "account_pro": "Професійний акаунт",
+  "account_teacher": "Акаунт викладача",
+  "toggle_vh": "Перемкнути вертикально/горизонтально",
+  "timeview_edition": "Редагувати Timeviews",
+  "search_show": "Пошук",
+  "timeview1_show": "Показати/сховати основний Timeview",
+  "timeview2_show": "Показати/приховати альтернативний часовий перегляд",
+  "timeview3_show": "Показати/приховати альтернативний часовий перегляд",
+  "timeview1_set": "Редагувати головний перегляд часу",
+  "timeview2_set": "Редагувати альтернативний перегляд часу",
+  "timeview_save": "Зберегти Timeview",
+  "catalogs_show": "Каталоги",
+  "database_show": "Показати базу даних",
+  "load": "Завантажити панелі та блоки",
+  "cosmos_show": "Перемкнути фон",
+  "cat_science": "Наука",
+  "cat_power": "Влада",
+  "cat_culture": "Культура",
+  "cat_trade": "Торгівля",
+  "cat_being": "Буття",
+  "settings": "Налаштування",
+  "wikipedia": "Вікіпедія",
+  "toggle_wsbackgd": "Фон",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Перемкнути макет",
+  "wikiback": "Назад",
+  "wikiforward": "Вперед",
+  "wikinewtab": "Нова вкладка",
+  "debug_select": "Меню відладки",
+  "debug_onoff": "Активувати debug-режим",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Показати/приховати діаграму",
+  "timepanel_show": "Таблиця timePanel",
+  "wikipage_show": "Показати сторінку Вікіпедії",
+  "wikidates_show": "Відображення вікі-дати в таблиці",
+  "tableTO_show": "Показати таблицю TimeObjects (debug)",
+  "tablePL_show": "Показати таблицю PanelLines (debug)",
+  "on": "так",
+  "off": "ні",
+  "source_possible": "Виберіть джерело вмісту (повний список уточнюється)",
+  "source_select": "Джерело:",
+  "credits": "Кредити",
+  "cred_cosmos": "Майстер Космосу: Деніс",
+  "cred_timeline": "Геній часу: Богдан",
+  "cred_backend": "Бог хмар:",
+  "cred_wikipedia": "Чарівник Вікіпедії: Сабат",
+  "cred_project": "Усвідомленість: П'єр",
+  "source_baidubaike": "Байду Байке",
+  "source_britannica": "Британніка",
+  "source_citizendium": "Громадянин",
+  "source_encyclopedia.com": "Енциклопедія",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "Інтернет-архів",
+  "source_projectgutemberg": "Проєкт Гутемберг",
+  "source_qiuwenbaike": "Цювен Байке",
+  "source_scholarpedia": "Сколарпедія",
+  "source_unesco": "ЮНЕСКО",
+  "source_wikipedia": "Вікіпедія",
+  "source_grokipedia": "Грокіпедія",
+  "source_worldhistory": "Всесвітня історія",
+  "cal_name": "Календар:",
+  "cal_availability_yes": "Доступно",
+  "cal_availability_no": "Ще не готові (нам потрібна допомога... веб-сайт для внесків тут)",
+  "cal_other": "Календарі",
+  "cal_usage": "Використання:",
+  "cal_gregorian": "григоріанський",
+  "cal_islamic": "Ісламський (хіджра)",
+  "cal_chinese": "китайська",
+  "cal_persian": "Перська (сонячна хіджра)",
+  "cal_ethiopian": "Ефіопський",
+  "cal_hebrew": "Іврит",
+  "cal_balinese": "Балійська",
+  "cal_creationist": "Креаціоніст",
+  "cal_gregorian_explanation": "Сонячний календар, 12 місяців, 365-366 днів, запроваджений Папою Григорієм XIII у 1582 році.",
+  "cal_islamic_explanation": "Місячний календар, 12 місяців, 354-355 днів, починається з переселення Мухаммеда до Медіни (622 рік н. е.).",
+  "cal_chinese_explanation": "Місячно-сонячний календар поєднує місячні місяці, сонячний рік, 12-річний зодіакальний цикл тварин. Використовується для традиційних східноазіатських свят.",
+  "cal_persian_explanation": "Сонячний календар, 365-366 днів, починається з весняного рівнодення (Навруза).",
+  "cal_balinese_explanation": "Календарна система, що поєднує одночасні цикли, включаючи 210-денний календар Павукон. Використовується для релігійних церемоній.",
+  "cal_hebrew_explanation": "Місячно-сонячний календар, 12-13 місяців, починається з моменту створення світу (3761 р. до н. е.). Використовується для релігійних обрядів.",
+  "cal_ethiopian_explanation": "Сонячний календар, 13 місяців (12 з 30 днів та 1 з 5-6 днів), на 7-8 років відстає від григоріанського календаря.",
+  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, відносячи створення світу до часу 6000-10 000 років тому.",
+  "cal_gregorian_usage": "Використання: 95% (офіційне) – Використовується як цивільний календар майже в кожній країні для офіційних та економічних цілей.",
+  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується приблизно 2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
+  "cal_chinese_usage": "Використання: 18% (культурне) – святкують ~1,4 мільярда китайців під час таких свят, як Місячний Новий рік.",
+  "cal_persian_usage": "Використання: 1,5% (цивільне/культурне) - Офіційний календар в Ірані (~89 млн) та Афганістані (~41 млн).",
+  "cal_balinese_usage": "Використання: 1,5% (цивільне) - офіційне в Ефіопії (~126 млн) та використовується в Еритреї.",
+  "cal_hebrew_usage": "Використання: 0,2% (релігійне) – Використовується єврейськими громадами (~16 млн осіб) для релігійних цілей.",
+  "cal_ethiopian_usage": "Використання: <0,1% (культурне) - В основному використовується на Балі (Індонезія), ~4,5 млн осіб.",
+  "cal_creationist_usage": "Використання: <0,01% (нішеве) – Використовується кількома фундаменталістськими християнськими громадами.",
   "tv_universe": "Всесвіт",
   "tv_life": "Життя",
   "tv_dinosaurs": "Динозаври",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "джерело",
-  "version": "версія",
-  "account_normal": "Звичайний акаунт",
-  "account_pro": "Професійний акаунт",
-  "account_teacher": "Акаунт викладача",
-  "toggle_vh": "Перемкнути вертикально/горизонтально",
-  "timeview_edition": "Редагувати Timeviews",
-  "search_show": "Пошук",
-  "timeview1_show": "Показати/сховати основний Timeview",
-  "timeview2_show": "Показати/приховати альтернативний часовий перегляд",
-  "timeview1_set": "Редагувати головний перегляд часу",
-  "timeview2_set": "Редагувати альтернативний перегляд часу",
-  "timeview_save": "Зберегти Timeview",
-  "catalogs_show": "Каталоги",
-  "database_show": "Показати базу даних",
-  "load": "Завантажити панелі та блоки",
-  "cosmos_show": "Перемкнути фон",
-  "cat_science": "Наука",
-  "cat_power": "Влада",
-  "cat_culture": "Культура",
-  "cat_trade": "Торгівля",
-  "cat_being": "Буття",
-  "settings": "Налаштування",
-  "wikipedia": "Вікіпедія",
-  "toggle_wsbackgd": "Фон",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Перемкнути макет",
-  "wikiback": "Назад",
-  "wikiforward": "Вперед",
-  "wikinewtab": "Нова вкладка",
-  "debug_select": "Меню відладки",
-  "debug_onoff": "Активувати debug-режим",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Показати/приховати діаграму",
-  "timepanel_show": "Таблиця timePanel",
-  "wikipage_show": "Показати сторінку Вікіпедії",
-  "wikidates_show": "Відображення вікі-дати в таблиці",
-  "tableTO_show": "Показати таблицю TimeObjects (debug)",
-  "tablePL_show": "Показати таблицю PanelLines (debug)",
-  "on": "так",
-  "off": "ні",
-  "source_possible": "Виберіть джерело вмісту (повний список уточнюється)",
-  "source_select": "Джерело:",
-  "credits": "Кредити",
-  "cred_cosmos": "Майстер Космосу: Деніс",
-  "cred_timeline": "Геній часу: Богдан",
-  "cred_backend": "Бог хмар: Аюб",
-  "cred_wikipedia": "Чарівник Вікіпедії: Сабат",
-  "cred_project": "Усвідомленість: П'єр",
-  "source_baidubaike": "Байду Байке",
-  "source_britannica": "Британніка",
-  "source_citizendium": "Громадянин",
-  "source_encyclopedia.com": "Енциклопедія",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Інтернет-архів",
-  "source_projectgutemberg": "Проєкт Гутемберг",
-  "source_qiuwenbaike": "Цювен Байке",
-  "source_scholarpedia": "Сколарпедія",
-  "source_unesco": "ЮНЕСКО",
-  "source_wikipedia": "Вікіпедія",
-  "source_grokipedia": "Грокіпедія",
-  "source_worldhistory": "Всесвітня історія",
-  "cal_gregorian": "григоріанський",
-  "cal_islamic": "Ісламський (хіджра)",
-  "cal_chinese": "Китайська (місячно-сонячна)",
-  "cal_persian": "Перська (сонячна хіджра)",
-  "cal_ethiopian": "Ефіопський",
-  "cal_hebrew": "Іврит",
-  "cal_balinese": "Балійська (Павукон і Сака)",
-  "cal_creationist": "Креаціоніст",
-  "cal_gregorian_explanation": "Світове використання: 95% (офіційне використання) – Використовується як цивільний календар майже в кожній країні для офіційних, економічних та міжнародних цілей. Навіть люди, які дотримуються інших календарів, часто використовують григоріанський у повсякденному житті.",
-  "cal_islamic_explanation": "Використання у світі: 24% (релігійне використання) - далі йдуть ~2 мільярди мусульман (приблизно 24% світу). В основному для релігійних свят (Рамадан, Хадж тощо), але зазвичай не для цивільного управління (за винятком Саудівської Аравії).",
-  "cal_chinese_explanation": "Світове використання: 18% (культурне використання) – відзначається приблизно 1,4 мільярдами китайців та закордонними китайськими громадами під час таких свят, як Місячний Новий рік. Не використовується для цивільного управління.",
-  "cal_persian_explanation": "Використання у світі: 1,5% (цивільне та культурне використання) - Офіційний календар в Ірані (~89 млн) та Афганістані (~41 млн), загалом ~130 млн.",
-  "cal_balinese_explanation": "Світове використання: 1,5% (цивільне використання) - офіційний в Ефіопії (~126 млн) та використовується в Еритреї.",
-  "cal_hebrew_explanation": "Використання у світі: 0,2% (релігійне використання) – Використовується єврейськими громадами (~16 млн осіб) для релігійних цілей.",
-  "cal_ethiopian_explanation": "Світове використання: <0,1% (культурне використання) - В основному використовується на Балі (Індонезія), ~4,5 млн осіб.",
-  "cal_creationist_explanation": "Світове використання: <0,01% (нішеве використання) – Рідко; кілька фундаменталістських християнських громад використовують розраховані «дати створення», але не як функціональну календарну систему."
+  "tv_2020s_wikipedia": ""
 }
