--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -16,6 +16,100 @@
   "unit_billion": "Md",
   "unit_million": "Mn",
   "unit_thousand": "D",
+  "trello": "Trello",
+  "source": "bron",
+  "version": "versie",
+  "account_normal": "Normale rekening",
+  "account_pro": "Professionele rekening",
+  "account_teacher": "Docentenaccount",
+  "toggle_vh": "Schakel verticaal/horizontaal in/uit",
+  "timeview_edition": "Tijdsbeelden",
+  "search_show": "Zoekopdracht",
+  "timeview1_show": "Toon/verberg de hoofdweergave van de tijdweergave",
+  "timeview2_show": "Alternatieve tijdweergave weergeven/verbergen",
+  "timeview3_show": "Alternatieve tijdweergave weergeven/verbergen",
+  "timeview1_set": "Bewerk de hoofdweergave van de tijdweergave",
+  "timeview2_set": "Alternatieve tijdweergave bewerken",
+  "timeview_save": "Tijdweergave opslaan",
+  "catalogs_show": "Catalogi",
+  "database_show": "Toon database",
+  "load": "Laadpanelen en -dozen",
+  "cosmos_show": "Achtergrond weergeven/verbergen",
+  "cat_science": "Wetenschap",
+  "cat_power": "Stroom",
+  "cat_culture": "Cultuur",
+  "cat_trade": "Handel",
+  "cat_being": "Wezen",
+  "settings": "Instellingen",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Achtergrond",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Lay-out weergeven/verbergen",
+  "wikiback": "Rug",
+  "wikiforward": "Vooruit",
+  "wikinewtab": "Nieuw tabblad",
+  "debug_select": "Foutopsporingsmenu",
+  "debug_onoff": "debugmodus",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Grafiek weergeven/verbergen",
+  "timepanel_show": "tijdpaneeltabel",
+  "wikipage_show": "Wikipedia-pagina weergeven",
+  "wikidates_show": "Toon wiki-datums in een tabel",
+  "tableTO_show": "Toon de TimeObjects-tabel (debug)",
+  "tablePL_show": "Toon de PanelLines-tabel (debug)",
+  "on": "Ja",
+  "off": "Nee",
+  "source_possible": "Selecteer broninhoud (volledige lijst volgt nog)",
+  "source_select": "Bron:",
+  "credits": "Credits",
+  "cred_cosmos": "Kosmische Meester: Ontkent",
+  "cred_timeline": "Tijdgenie: Bogdan",
+  "cred_backend": "Wolkengod:",
+  "cred_wikipedia": "Wikipedia-tovenaar: Sabat",
+  "cred_project": "Mindfulness: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Citizendium",
+  "source_encyclopedia.com": "Encyclopedie",
+  "source_imdb": "IMDb",
+  "source_internetarchive": "Internetarchief",
+  "source_projectgutemberg": "Project Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "UNESCO",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "Wereldgeschiedenis",
+  "cal_name": "Kalender:",
+  "cal_availability_yes": "Beschikbaar",
+  "cal_availability_no": "Nog niet klaar (we hebben hulp nodig... bijdrage-website-hier)",
+  "cal_other": "Kalenders",
+  "cal_usage": "Gebruik:",
+  "cal_gregorian": "Gregoriaans",
+  "cal_islamic": "Islamitisch (Hijri)",
+  "cal_chinese": "Chinese",
+  "cal_persian": "Perzisch (Zonnekalender Hijri)",
+  "cal_ethiopian": "Ethiopisch",
+  "cal_hebrew": "Hebreeuws",
+  "cal_balinese": "Balinees",
+  "cal_creationist": "Creationist",
+  "cal_gregorian_explanation": "De zonnekalender, met 12 maanden en 365-366 dagen, werd in 1582 ingevoerd door paus Gregorius XIII.",
+  "cal_islamic_explanation": "De maankalender, met 12 maanden en 354-355 dagen, begint met de migratie van Mohammed naar Medina (622 n.Chr.).",
+  "cal_chinese_explanation": "De lunisolaire kalender combineert de maanmaanden, het zonnejaar en de 12-jarige cyclus van de dierenriem. Deze kalender wordt gebruikt voor traditionele Oost-Aziatische festivals.",
+  "cal_persian_explanation": "De zonnekalender, die 365-366 dagen duurt, begint bij de lente-equinox (Nowruz).",
+  "cal_balinese_explanation": "Een kalendersysteem dat gelijktijdige cycli combineert, waaronder een Pawukon-kalender van 210 dagen. Gebruikt voor religieuze ceremonies.",
+  "cal_hebrew_explanation": "De lunisolaire kalender, met 12-13 maanden, begint bij de schepping (3761 v.Chr.). Deze wordt gebruikt voor religieuze plechtigheden.",
+  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen) en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
+  "cal_creationist_explanation": "Het chronologische kader berekent de leeftijd van de aarde aan de hand van bijbelse geslachtsregisters en plaatst de schepping 6.000 tot 10.000 jaar geleden.",
+  "cal_gregorian_usage": "Gebruik: 95% (officieel) - Wordt in bijna elk land gebruikt als burgerlijke kalender voor officiële en economische doeleinden.",
+  "cal_islamic_usage": "Gebruik: 24% (religieus) - Wordt nageleefd door ongeveer 2 miljard moslims (ongeveer 24% van de wereldbevolking), voornamelijk tijdens religieuze feestdagen (Ramadan, Hajj, enz.).",
+  "cal_chinese_usage": "Gebruik: 18% (cultureel) - Wordt door ongeveer 1,4 miljard Chinezen in acht genomen tijdens festivals zoals Chinees Nieuwjaar.",
+  "cal_persian_usage": "Gebruik: 1,5% (burgerlijk/cultureel) - Officiële kalender in Iran (~89 miljoen) en Afghanistan (~41 miljoen).",
+  "cal_balinese_usage": "Gebruik: 1,5% (civiel) - Officieel in Ethiopië (~126 miljoen) en gebruikt in Eritrea.",
+  "cal_hebrew_usage": "Gebruik: 0,2% (religieus) - Gebruikt door Joodse gemeenschappen (~16 miljoen mensen) voor religieuze doeleinden.",
+  "cal_ethiopian_usage": "Gebruik: <0,1% (cultureel) - Voornamelijk gebruikt op Bali (Indonesië), door ongeveer 4,5 miljoen mensen.",
+  "cal_creationist_usage": "Gebruik: <0,01% (niche) - Gebruikt door enkele fundamentalistische christelijke gemeenschappen.",
   "tv_universe": "Universum",
   "tv_life": "Leven",
   "tv_dinosaurs": "Dinosaurussen",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "bron",
-  "version": "versie",
-  "account_normal": "Normale rekening",
-  "account_pro": "Professionele account",
-  "account_teacher": "Lerarenaccount",
-  "toggle_vh": "Schakelen tussen verticaal/horizontaal",
-  "timeview_edition": "Tijdweergaven bewerken",
-  "search_show": "Zoekopdracht",
-  "timeview1_show": "Toon/verberg hoofdtijdweergave",
-  "timeview2_show": "Alternatieve tijdweergave weergeven/verbergen",
-  "timeview1_set": "Bewerk hoofdtijdweergave",
-  "timeview2_set": "Alternatieve tijdweergave bewerken",
-  "timeview_save": "Tijdweergave opslaan",
-  "catalogs_show": "Catalogi",
-  "database_show": "Database weergeven",
-  "load": "Laadpanelen en dozen",
-  "cosmos_show": "Achtergrond wisselen",
-  "cat_science": "Wetenschap",
-  "cat_power": "Stroom",
-  "cat_culture": "Cultuur",
-  "cat_trade": "Handel",
-  "cat_being": "Wezen",
-  "settings": "Instellingen",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Achtergrond",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Lay-out wisselen",
-  "wikiback": "Rug",
-  "wikiforward": "Vooruit",
-  "wikinewtab": "Nieuw tabblad",
-  "debug_select": "Debug-menu",
-  "debug_onoff": "debugMode",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Grafiek weergeven/verbergen",
-  "timepanel_show": "timePanel-tabel",
-  "wikipage_show": "Wikipedia-pagina weergeven",
-  "wikidates_show": "Wiki-data in een tabel weergeven",
-  "tableTO_show": "Tabel TimeObjects weergeven (foutopsporing)",
-  "tablePL_show": "PanelLines-tabel weergeven (foutopsporing)",
-  "on": "Ja",
-  "off": "Nee",
-  "source_possible": "Selecteer broninhoud (volledige lijst nog niet bekend)",
-  "source_select": "Bron:",
-  "credits": "Credits",
-  "cred_cosmos": "Kosmosmeester: Denys",
-  "cred_timeline": "Tijdgenie: Bogdan",
-  "cred_backend": "Wolkengod: Ayoub",
-  "cred_wikipedia": "Wikipedia Wizard: Sabat",
-  "cred_project": "Mindfulness: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Burgerlijk",
-  "source_encyclopedia.com": "Encyclopedie",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Internetarchief",
-  "source_projectgutemberg": "Project Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "UNESCO",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "Wereldgeschiedenis",
-  "cal_gregorian": "Gregoriaans",
-  "cal_islamic": "Islamitisch (Hijri)",
-  "cal_chinese": "Chinees (Lunisolair)",
-  "cal_persian": "Perzisch (Zonne-Hijri)",
-  "cal_ethiopian": "Ethiopisch",
-  "cal_hebrew": "Hebreeuws",
-  "cal_balinese": "Balinees (Pawukon & Saka)",
-  "cal_creationist": "Creationist",
-  "cal_gregorian_explanation": "Wereldwijd gebruik: 95% (officieel gebruik) - Wordt in bijna elk land gebruikt als burgerlijke kalender voor officiële, economische en internationale doeleinden. Zelfs mensen die andere kalenders volgen, gebruiken vaak de Gregoriaanse dagindeling.",
-  "cal_islamic_explanation": "Wereldwijd gebruik: 24% (religieus gebruik) - Gevolgd door ~2 miljard moslims (ongeveer 24% van de wereld). Voornamelijk voor religieuze feestdagen (Ramadan, Hadj, enz.), maar doorgaans niet voor civiel bestuur (behalve in Saoedi-Arabië).",
-  "cal_chinese_explanation": "Wereldwijd gebruik: 18% (cultureel gebruik) - Geobserveerd door ~1,4 miljard Chinezen en Chinese gemeenschappen in het buitenland tijdens festivals zoals het Chinese Nieuwjaar. Niet gebruikt voor civiel bestuur.",
-  "cal_persian_explanation": "Wereldwijd gebruik: 1,5% (civiel en cultureel gebruik) - Officiële kalender in Iran (~89M) en Afghanistan (~41M), in totaal ~130M.",
-  "cal_balinese_explanation": "Wereldwijd gebruik: 1,5% (civiel gebruik) - Officieel in Ethiopië (~126M) en gebruikt in Eritrea.",
-  "cal_hebrew_explanation": "Wereldwijd gebruik: 0,2% (religieus gebruik) - Gebruikt door Joodse gemeenschappen (~16 miljoen mensen) voor religieuze doeleinden.",
-  "cal_ethiopian_explanation": "Wereldwijd gebruik: <0,1% (cultureel gebruik) - Voornamelijk gebruikt op Bali (Indonesië), ~4,5 miljoen mensen.",
-  "cal_creationist_explanation": "Wereldwijd gebruik: <0,01% (nichegebruik) - Zeldzaam; een paar fundamentalistische christelijke gemeenschappen gebruiken berekende 'scheppingsdata', maar niet als een functioneel kalendersysteem."
+  "tv_2020s_wikipedia": ""
 }
