--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -16,6 +16,100 @@
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
+  "trello": "Trello",
+  "source": "källa",
+  "version": "version",
+  "account_normal": "Vanligt konto",
+  "account_pro": "Professionellt konto",
+  "account_teacher": "Lärarkonto",
+  "toggle_vh": "Växla vertikalt/horisontellt",
+  "timeview_edition": "Tidsvyer",
+  "search_show": "Söka",
+  "timeview1_show": "Visa/dölj huvudtidsvyn",
+  "timeview2_show": "Visa/dölj alternativ tidsvy",
+  "timeview3_show": "Visa/dölj alternativ tidsvy",
+  "timeview1_set": "Redigera huvudtidsvy",
+  "timeview2_set": "Redigera alternativ tidsvy",
+  "timeview_save": "Spara tidvy",
+  "catalogs_show": "Kataloger",
+  "database_show": "Visa databas",
+  "load": "Lastpaneler och lådor",
+  "cosmos_show": "Växla bakgrund",
+  "cat_science": "Vetenskap",
+  "cat_power": "Driva",
+  "cat_culture": "Kultur",
+  "cat_trade": "Handel",
+  "cat_being": "Varelse",
+  "settings": "Inställningar",
+  "wikipedia": "Wikipedia",
+  "toggle_wsbackgd": "Bakgrund",
+  "toggle_wikitimeview": "Timeview",
+  "toggle_wikitipedia": "WikiDatesTable",
+  "wikilayout": "Växla layout",
+  "wikiback": "Tillbaka",
+  "wikiforward": "Fram",
+  "wikinewtab": "Ny flik",
+  "debug_select": "Felsökningsmeny",
+  "debug_onoff": "felsökningsläge",
+  "wikibtns_show": "Wikipedia shortcuts",
+  "chart_show": "Visa/dölj diagram",
+  "timepanel_show": "timePanel-tabell",
+  "wikipage_show": "Visa Wikipedia-sida",
+  "wikidates_show": "Visa wiki-datum i en tabell",
+  "tableTO_show": "Visa TimeObjects-tabellen (felsökning)",
+  "tablePL_show": "Visa PanelLines-tabellen (felsökning)",
+  "on": "ja",
+  "off": "inga",
+  "source_possible": "Välj källinnehåll (fullständig lista ännu ej fastställd)",
+  "source_select": "Källa:",
+  "credits": "Krediter",
+  "cred_cosmos": "Kosmosmästare: Denys",
+  "cred_timeline": "Tidsgeniet: Bogdan",
+  "cred_backend": "Molnguden:",
+  "cred_wikipedia": "Wikipedia-trollkarlen: Sabat",
+  "cred_project": "Mindfulness: Pierre",
+  "source_baidubaike": "Baidu Baike",
+  "source_britannica": "Britannica",
+  "source_citizendium": "Citizendium",
+  "source_encyclopedia.com": "Encyklopedi",
+  "source_imdb": "Imdb",
+  "source_internetarchive": "Internetarkivet",
+  "source_projectgutemberg": "Projekt Gutemberg",
+  "source_qiuwenbaike": "Qiuwen Baike",
+  "source_scholarpedia": "Scholarpedia",
+  "source_unesco": "Unesco",
+  "source_wikipedia": "Wikipedia",
+  "source_grokipedia": "Grokipedia",
+  "source_worldhistory": "Världshistoria",
+  "cal_name": "Kalender:",
+  "cal_availability_yes": "Tillgänglig",
+  "cal_availability_no": "Inte klar än (vi behöver hjälp... bidragswebbplats-här)",
+  "cal_other": "Kalendrar",
+  "cal_usage": "Användande:",
+  "cal_gregorian": "Gregoriansk",
+  "cal_islamic": "Islamisk (Hijri)",
+  "cal_chinese": "kinesiska",
+  "cal_persian": "Persiska (solar hijri)",
+  "cal_ethiopian": "etiopisk",
+  "cal_hebrew": "Hebreiska",
+  "cal_balinese": "balinesisk",
+  "cal_creationist": "Kreationist",
+  "cal_gregorian_explanation": "Solkalender, 12 månader, 365-366 dagar, introducerad av påven Gregorius XIII år 1582.",
+  "cal_islamic_explanation": "Månkalendern, 12 månader, 354-355 dagar, börjar med Muhammeds migration till Medina (622 e.Kr.).",
+  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykel för djur. Används för traditionella östasiatiska festivaler.",
+  "cal_persian_explanation": "Solkalendern, 365-366 dagar, börjar vid vårdagjämningen (Nowruz).",
+  "cal_balinese_explanation": "Kalendersystem som kombinerar samtidiga cykler, inklusive en 210-dagars Pawukon-kalender. Används för religiösa ceremonier.",
+  "cal_hebrew_explanation": "Lunisolarkalendern, 12–13 månader, börjar vid skapelsen (3761 f.Kr.). Används för religiösa högtider.",
+  "cal_ethiopian_explanation": "Solkalender, 13 månader (12 med 30 dagar och 1 med 5-6 dagar), 7-8 år efter den gregorianska kalendern.",
+  "cal_creationist_explanation": "Kronologiskt ramverk, beräknar jordens ålder utifrån bibliska släktregister och placerar skapelsen för 6 000–10 000 år sedan.",
+  "cal_gregorian_usage": "Användning: 95 % (officiell) - Används som civil kalender i nästan alla länder för officiella och ekonomiska ändamål.",
+  "cal_islamic_usage": "Användning: 24 % (religiös) - Firas av ~2 miljarder muslimer (~24 % av världen), främst för religiösa högtider (Ramadan, Hajj, etc.).",
+  "cal_chinese_usage": "Användning: 18 % (kulturell) - Firas av ~1,4 miljarder kineser för festivaler som kinesiskt nyår.",
+  "cal_persian_usage": "Användning: 1,5 % (civil/kulturell) - Officiell kalender i Iran (~89 miljoner) och Afghanistan (~41 miljoner).",
+  "cal_balinese_usage": "Användning: 1,5 % (civil) - Tjänsteman i Etiopien (~126 miljoner) och använd i Eritrea.",
+  "cal_hebrew_usage": "Användning: 0,2 % (religiös) - Används av judiska samfund (~16 miljoner personer) för religiösa ändamål.",
+  "cal_ethiopian_usage": "Användning: <0,1 % (kulturell) - Används främst på Bali (Indonesien), ~4,5 miljoner människor.",
+  "cal_creationist_usage": "Användning: <0,01% (nisch) - Används av ett fåtal fundamentalistiska kristna samfund.",
   "tv_universe": "Universum",
   "tv_life": "Liv",
   "tv_dinosaurs": "Dinosaurier",
@@ -181,85 +275,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "trello": "Trello",
-  "source": "källa",
-  "version": "version",
-  "account_normal": "Vanligt konto",
-  "account_pro": "Professionellt konto",
-  "account_teacher": "Lärarkonto",
-  "toggle_vh": "Växla vertikalt/horisontellt",
-  "timeview_edition": "Redigera tidsvyer",
-  "search_show": "Söka",
-  "timeview1_show": "Visa/dölj huvudtidsvyn",
-  "timeview2_show": "Visa/dölj alternativ tidsvy",
-  "timeview1_set": "Redigera huvudtidsvy",
-  "timeview2_set": "Redigera alternativ tidsvy",
-  "timeview_save": "Spara tidvy",
-  "catalogs_show": "Kataloger",
-  "database_show": "Visa databas",
-  "load": "Lastpaneler och lådor",
-  "cosmos_show": "Växla bakgrund",
-  "cat_science": "Vetenskap",
-  "cat_power": "Driva",
-  "cat_culture": "Kultur",
-  "cat_trade": "Handel",
-  "cat_being": "Varelse",
-  "settings": "Inställningar",
-  "wikipedia": "Wikipedia",
-  "toggle_wsbackgd": "Bakgrund",
-  "toggle_wikitimeview": "Timeview",
-  "toggle_wikitipedia": "WikiDatesTable",
-  "wikilayout": "Växla layout",
-  "wikiback": "Tillbaka",
-  "wikiforward": "Fram",
-  "wikinewtab": "Ny flik",
-  "debug_select": "Felsökningsmeny",
-  "debug_onoff": "felsökningsläge",
-  "wikibtns_show": "Wikipedia shortcuts",
-  "chart_show": "Visa/dölj diagram",
-  "timepanel_show": "timePanel-tabell",
-  "wikipage_show": "Visa Wikipedia-sida",
-  "wikidates_show": "Visa wiki-datum i en tabell",
-  "tableTO_show": "Visa TimeObjects-tabellen (felsökning)",
-  "tablePL_show": "Visa PanelLines-tabellen (felsökning)",
-  "on": "ja",
-  "off": "inga",
-  "source_possible": "Välj källinnehåll (fullständig lista ännu ej fastställd)",
-  "source_select": "Källa:",
-  "credits": "Krediter",
-  "cred_cosmos": "Kosmosmästare: Denys",
-  "cred_timeline": "Tidsgeniet: Bogdan",
-  "cred_backend": "Molnguden: Ayoub",
-  "cred_wikipedia": "Wikipedia-trollkarlen: Sabat",
-  "cred_project": "Mindfulness: Pierre",
-  "source_baidubaike": "Baidu Baike",
-  "source_britannica": "Britannica",
-  "source_citizendium": "Citizendium",
-  "source_encyclopedia.com": "Encyklopedi",
-  "source_imdb": "Imdb",
-  "source_internetarchive": "Internetarkivet",
-  "source_projectgutemberg": "Projekt Gutemberg",
-  "source_qiuwenbaike": "Qiuwen Baike",
-  "source_scholarpedia": "Scholarpedia",
-  "source_unesco": "Unesco",
-  "source_wikipedia": "Wikipedia",
-  "source_grokipedia": "Grokipedia",
-  "source_worldhistory": "Världshistoria",
-  "cal_gregorian": "Gregoriansk",
-  "cal_islamic": "Islamisk (Hijri)",
-  "cal_chinese": "Kinesiska (lunisolära)",
-  "cal_persian": "Persiska (solar hijri)",
-  "cal_ethiopian": "etiopisk",
-  "cal_hebrew": "Hebreiska",
-  "cal_balinese": "Balinesisk (Pawukon och Saka)",
-  "cal_creationist": "kreationist",
-  "cal_gregorian_explanation": "Världsanvändning: 95 % (officiell användning) - Används som civil kalender i nästan alla länder för officiella, ekonomiska och internationella ändamål. Även personer som följer andra kalendrar använder ofta gregoriansk dag-till-dag.",
-  "cal_islamic_explanation": "Världsanvändning: 24 % (religiös användning) - Följs av ~2 miljarder muslimer (cirka 24 % av världen). Främst för religiösa högtider (Ramadan, Hajj, etc.) men vanligtvis inte för civil administration (förutom i Saudiarabien).",
-  "cal_chinese_explanation": "Världsanvändning: 18 % (kulturell användning) - Observeras av ~1,4 miljarder kineser och utländska kinesiska samhällen för festivaler som det kinesiska nyåret. Används inte för civil administration.",
-  "cal_persian_explanation": "Världsanvändning: 1,5 % (civil och kulturell användning) - Officiell kalender i Iran (~89 miljoner) och Afghanistan (~41 miljoner), totalt ~130 miljoner.",
-  "cal_balinese_explanation": "Världsanvändning: 1,5 % (civil användning) - Officiell i Etiopien (~126 miljoner) och använd i Eritrea.",
-  "cal_hebrew_explanation": "Världsanvändning: 0,2 % (religiös användning) - Används av judiska samfund (~16 miljoner personer) för religiösa ändamål.",
-  "cal_ethiopian_explanation": "Världsanvändning: <0,1 % (kulturell användning) - Används främst på Bali (Indonesien), ~4,5 miljoner människor.",
-  "cal_creationist_explanation": "Världsanvändning: <0,01 % (nischanvändning) - Sällsynt; ett fåtal fundamentalistiska kristna samfund använder beräknade \"skapelsesdatum\" men inte som ett funktionellt kalendersystem."
+  "tv_2020s_wikipedia": ""
 }
